--- a/articles/automation/index.yml
+++ b/articles/automation/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7e075434b8c785665d28a2981233fc17e2a1ceac
-ms.sourcegitcommit: 333d4246f62b858e376dcdcda789ecbc0c93cd92
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 12/01/2018
-ms.locfileid: "52726335"
 documentType: LandingData
 title: Gebruikersdocumentatie voor Azure Automation
 metadata:
-  document_id: 
-  title: Documentatie voor Azure Automation - zelfstudies, API-verwijzing
+  document_id: null
+  title: 'Documentatie voor Azure Automation - zelfstudies, API-verwijzing'
   description: Azure Automation leren gebruiken
   services: automation
   author: georgewallace
@@ -20,48 +14,48 @@ metadata:
   ms.date: 12/13/2017
   ms.author: gwallace
 abstract:
-  description: Leer hoe u Automation gebruikt om operationele taken in een hybride omgeving te configureren en te automatiseren. Zelfstudies, API-verwijzingen en andere documentatie laten u zien hoe u processen automatiseert, updatebeheer uitvoert, Desired State Configuration toepast, wijzigingen bijhoudt en inventarisgegevens verzamelt.
+  description: 'Leer hoe u Automation gebruikt om operationele taken in een hybride omgeving te configureren en te automatiseren. Zelfstudies, API-verwijzingen en andere documentatie laten u zien hoe u processen automatiseert, updatebeheer uitvoert, Desired State Configuration toepast, wijzigingen bijhoudt en inventarisgegevens verzamelt.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Leer hoe u uw Azure-omgeving of uw hybride omgeving met behulp van Automation automatiseert en configureert:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: /azure/automation/media/index/automation.svg
-      text: Een Automation-account maken
-      href: /azure/automation/automation-quickstart-create-account
-    - image:
-        src: /azure/automation/media/index/runbook.svg
-      text: Een runbook maken
-      href: /azure/automation/automation-quickstart-create-runbook
-    - image:
-        src: /azure/automation/media/index/dscconfig.svg
-      text: Een DSC-configuratie maken
-      href: /azure/automation/automation-quickstart-dsc-configuration
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Leer hoe u uw Azure-omgeving of uw hybride omgeving integreert, implementeert en beheert.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Leer hoe u uw Azure-omgeving of uw hybride omgeving met behulp van Automation automatiseert en configureert:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/automation/media/index/automation.svg
+            text: Een Automation-account maken
+            href: /azure/automation/automation-quickstart-create-account
+          - image:
+              src: /azure/automation/media/index/runbook.svg
+            text: Een runbook maken
+            href: /azure/automation/automation-quickstart-create-runbook
+          - image:
+              src: /azure/automation/media/index/dscconfig.svg
+            text: Een DSC-configuratie maken
+            href: /azure/automation/automation-quickstart-dsc-configuration
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/automation/automation-watchers-tutorial">Watcher-taken configureren</a>
-    - html: <a href="/azure/automation/automation-tutorial-update-management">Updates voor uw virtuele machine beheren</a>
-    - html: <a href="/azure/automation/automation-onboard-solutions">Vrijgeven op grote schaal</a>
-    - html: <a href="/azure/automation/automation-tutorial-installed-software">De software identificeren die op een virtuele machine is geïnstalleerd</a>
-    - html: <a href="/azure/automation/automation-tutorial-troubleshoot-changes">Problemen met wijzigingen aan een virtuele machine oplossen</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Leer hoe u uw Azure-omgeving of uw hybride omgeving integreert, implementeert en beheert.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/automation/automation-watchers-tutorial">Watcher-taken configureren</a>
+          - html: <a href="/azure/automation/automation-tutorial-update-management">Updates voor uw virtuele machine beheren</a>
+          - html: <a href="/azure/automation/automation-onboard-solutions">Vrijgeven op grote schaal</a>
+          - html: <a href="/azure/automation/automation-tutorial-installed-software">De software identificeren die op een virtuele machine is geïnstalleerd</a>
+          - html: <a href="/azure/automation/automation-tutorial-troubleshoot-changes">Problemen met wijzigingen aan een virtuele machine oplossen</a>
+  - title: Naslaginformatie
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/powershell/module/azurerm.automation">PowerShell</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/microsoft.azure.management.automation">.NET</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/automation">REST-API voor Automation</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/powershell/module/azurerm.automation">PowerShell</a></p>
+          - title: Talen
+            html: <p><a href="/dotnet/api/microsoft.azure.management.automation">.NET</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/automation">REST-API voor Automation</a></p>
