--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -1,150 +1,143 @@
-items:
 - name: Azure Container Registry
   href: ./index.yml
 - name: Overzicht
   items:
-  - name: Over Container Registry
-    href: container-registry-intro.md
+    - name: Over Container Registry
+      href: container-registry-intro.md
 - name: Snelstartgidsen
-  items:
-  - name: Een containerregister maken - CLI
-    href: container-registry-get-started-azure-cli.md
-  - name: Een containerregister maken - Portal
-    href: container-registry-get-started-portal.md
-  - name: Een containerregister maken - PowerShell
-    href: container-registry-get-started-powershell.md
-  - name: Installatiekopieën compileren en uitvoeren - CLI
-    href: container-registry-quickstart-task-cli.md
-  - name: Gebeurtenissen verzenden naar Event Grid - CLI
-    href: container-registry-event-grid-quickstart.md
   expanded: true
+  items:
+    - name: Een containerregister maken - CLI
+      href: container-registry-get-started-azure-cli.md
+    - name: Een containerregister maken - Portal
+      href: container-registry-get-started-portal.md
+    - name: Een containerregister maken - PowerShell
+      href: container-registry-get-started-powershell.md
+    - name: Installatiekopieën compileren en uitvoeren - CLI
+      href: container-registry-quickstart-task-cli.md
+    - name: Gebeurtenissen verzenden naar Event Grid - CLI
+      href: container-registry-event-grid-quickstart.md
 - name: Zelfstudies
   items:
-  - name: Installatiekopieën compileren
-    items:
-    - name: 1 - Installatiekopieën in Azure compileren
-      href: container-registry-tutorial-quick-task.md
-    - name: 2 - Compileren van installatiekopieën automatiseren
-      href: container-registry-tutorial-build-task.md
-    - name: 3 - Updates van basisinstallatiekopieën compileren
-      href: container-registry-tutorial-base-image-update.md
-  - name: Geo-replicatie toepassen voor een register
-    items:
-    - name: 1 - Containerregister voorbereiden
-      href: container-registry-tutorial-prepare-registry.md
-    - name: 2 - Webtoepassing implementeren
-      href: container-registry-tutorial-deploy-app.md
-    - name: 3 - Webtoepassing bijwerken
-      href: container-registry-tutorial-deploy-update.md
+    - name: Installatiekopieën compileren
+      items:
+        - name: 1 - Installatiekopieën in Azure compileren
+          href: container-registry-tutorial-quick-task.md
+        - name: 2 - Compileren van installatiekopieën automatiseren
+          href: container-registry-tutorial-build-task.md
+        - name: 3 - Updates van basisinstallatiekopieën compileren
+          href: container-registry-tutorial-base-image-update.md
+    - name: Geo-replicatie toepassen voor een register
+      items:
+        - name: 1 - Containerregister voorbereiden
+          href: container-registry-tutorial-prepare-registry.md
+        - name: 2 - Webtoepassing implementeren
+          href: container-registry-tutorial-deploy-app.md
+        - name: 3 - Webtoepassing bijwerken
+          href: container-registry-tutorial-deploy-update.md
 - name: Concepten
   items:
-  - name: Container Registry-SKU's
-    href: container-registry-skus.md
-  - name: Afbeeldingopslag
-    href: container-registry-storage.md
-  - name: Indelingen voor inhoud
-    href: container-registry-image-formats.md
-  - name: Geo-replicatie
-    href: container-registry-geo-replication.md
-  - name: Rollen en machtigingen
-    href: container-registry-roles.md
-  - name: Best practices voor het register
-    href: container-registry-best-practices.md
+    - name: Container Registry-SKU's
+      href: container-registry-skus.md
+    - name: Afbeeldingopslag
+      href: container-registry-storage.md
+    - name: Indelingen voor inhoud
+      href: container-registry-image-formats.md
+    - name: Geo-replicatie
+      href: container-registry-geo-replication.md
+    - name: Rollen en machtigingen
+      href: container-registry-roles.md
+    - name: Best practices voor het register
+      href: container-registry-best-practices.md
 - name: Handleidingen
   items:
-  - name: Registerbewerkingen
-    items:
-    - name: Een installatiekopie pushen en ophalen
-      href: container-registry-get-started-docker-cli.md
-    - name: Opslagplaatsen weergeven
-      href: container-registry-repositories.md
-    - name: Containerinstallatiekopieën importeren
-      href: container-registry-import-images.md
-    - name: Containerinstallatiekopieën vergrendelen
-      href: container-registry-image-lock.md
-    - name: Containerinstallatiekopieën verwijderen
-      href: container-registry-delete.md
-    - name: Een klassiek register upgraden
-      href: container-registry-upgrade.md
-    - name: ACR-webhooks gebruiken
-      href: container-registry-webhook.md
-    - name: Opslagplaatsen voor Helm-grafieken (preview)
-      href: container-registry-helm-repos.md
-  - name: Verificatie en beveiliging
-    items:
-    - name: Toegang beperken met een virtueel netwerk (preview)
-      href: container-registry-vnet.md
-    - name: Verificatieoverzicht
-      href: container-registry-authentication.md
+    - name: Registerbewerkingen
       items:
-      - name: Verificatie van service-principal
-        href: container-registry-auth-service-principal.md
-      - name: Verificatie van beheerde identiteit
-        href: container-registry-authentication-managed-identity.md
-      - name: Verificatie via Azure Container Instances
-        href: container-registry-auth-aci.md
-      - name: Verificatie via Azure Kubernetes Service (AKS)
-        href: container-registry-auth-aks.md
-    - name: Inhoud vertrouwen (Preview-versie)
-      href: container-registry-content-trust.md
-  - name: Compileren en patchen
-    items:
-    - name: ACR-taken
-      href: container-registry-tasks-overview.md
-    - name: Taken met meerdere stappen
-      href: container-registry-tasks-multi-step.md
-  - name: Registers en andere Azure-services
-    items:
-    - name: Azure Container Instances
-      href: ../container-instances/container-instances-tutorial-prepare-app.md
-    - name: Azure Kubernetes Service (AKS)
-      href: ../aks/tutorial-kubernetes-prepare-app.md
-    - name: Service Fabric
-      href: ../service-fabric/service-fabric-tutorial-create-container-images.md
+        - name: Een installatiekopie pushen en ophalen
+          href: container-registry-get-started-docker-cli.md
+        - name: Opslagplaatsen weergeven
+          href: container-registry-repositories.md
+        - name: Containerinstallatiekopieën importeren
+          href: container-registry-import-images.md
+        - name: Containerinstallatiekopieën vergrendelen
+          href: container-registry-image-lock.md
+        - name: Containerinstallatiekopieën verwijderen
+          href: container-registry-delete.md
+        - name: Een klassiek register upgraden
+          href: container-registry-upgrade.md
+        - name: ACR-webhooks gebruiken
+          href: container-registry-webhook.md
+        - name: Opslagplaatsen voor Helm-grafieken (preview)
+          href: container-registry-helm-repos.md
+    - name: Verificatie en beveiliging
+      items:
+        - name: Toegang beperken met een virtueel netwerk (preview)
+          href: container-registry-vnet.md
+        - name: Verificatieoverzicht
+          href: container-registry-authentication.md
+          items:
+            - name: Verificatie van service-principal
+              href: container-registry-auth-service-principal.md
+            - name: Verificatie van beheerde identiteit
+              href: container-registry-authentication-managed-identity.md
+            - name: Verificatie via Azure Container Instances
+              href: container-registry-auth-aci.md
+            - name: Verificatie via Azure Kubernetes Service (AKS)
+              href: container-registry-auth-aks.md
+        - name: Inhoud vertrouwen (Preview-versie)
+          href: container-registry-content-trust.md
+    - name: Compileren en patchen
+      items:
+        - name: ACR-taken
+          href: container-registry-tasks-overview.md
+        - name: Taken met meerdere stappen
+          href: container-registry-tasks-multi-step.md
+    - name: Registers en andere Azure-services
+      items:
+        - name: Azure Container Instances
+          href: ../container-instances/container-instances-tutorial-prepare-app.md
+        - name: Azure Kubernetes Service (AKS)
+          href: ../aks/tutorial-kubernetes-prepare-app.md
+        - name: Service Fabric
+          href: ../service-fabric/service-fabric-tutorial-create-container-images.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/acr
-  - name: REST
-    href: /rest/api/containerregistry
-  - name: PowerShell
-    href: /powershell/module/az.containerregistry
-  - name: .NET
-    href: /dotnet/api/overview/azure/containerregistry
-  - name: Python
-    href: /python/api/overview/azure/container-registry
-  - name: Java
-    href: /java/api/overview/azure/containerregistry
-  - name: Node.js
-    href: /javascript/api/overview/azure/container-registry
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.containerregistry/registries
-  - name: ACR-taken YAML
-    href: container-registry-tasks-reference-yaml.md
-  - name: Webhook-schema
-    href: container-registry-webhook-reference.md
-  - name: Event Grid-schema
-    href: ../event-grid/event-schema-container-registry.md
-    maintainContext: true
+    - name: Azure-CLI
+      href: /cli/azure/acr
+    - name: REST
+      href: /rest/api/containerregistry
+    - name: PowerShell
+      href: /powershell/module/az.containerregistry
+    - name: .NET
+      href: /dotnet/api/overview/azure/containerregistry
+    - name: Python
+      href: /python/api/overview/azure/container-registry
+    - name: Java
+      href: /java/api/overview/azure/containerregistry
+    - name: Node.js
+      href: /javascript/api/overview/azure/container-registry
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.containerregistry/registries
+    - name: ACR-taken YAML
+      href: container-registry-tasks-reference-yaml.md
+    - name: Webhook-schema
+      href: container-registry-webhook-reference.md
+    - name: Event Grid-schema
+      href: ../event-grid/event-schema-container-registry.md
+      maintainContext: true
 - name: Resources
   items:
-  - name: Uw vaardigheden ontwikkelen met Microsoft Learn
-    href: /learn/browse/?products=azure-container-registry
-  - name: Beschikbaarheid in regio’s
-    href: https://azure.microsoft.com/regions/services/
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/container-registry/
-  - name: Roadmap
-    href: https://aka.ms/acr/roadmap
-  - name: Productfeedback geven
-    href: https://feedback.azure.com/forums/903958-azure-container-registry
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-container-registry
-  - name: Video's
-    href: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
-ms.openlocfilehash: 987b70f527afe9b9d09eeef70c7fa706c3e58932
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59787646"
+    - name: Uw vaardigheden ontwikkelen met Microsoft Learn
+      href: /learn/browse/?products=azure-container-registry
+    - name: Beschikbaarheid in regio’s
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/container-registry/'
+    - name: Roadmap
+      href: 'https://aka.ms/acr/roadmap'
+    - name: Productfeedback geven
+      href: 'https://feedback.azure.com/forums/903958-azure-container-registry'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-container-registry'
+    - name: Video's
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest'
