--- a/articles/docker/toc.yml
+++ b/articles/docker/toc.yml
@@ -1,40 +1,33 @@
-items:
 - name: Docker-documentatie
   href: index.md
 - name: Snelstartgids
-  items:
-  - name: Docker Marketplace-sjabloon
-    href: https://azuremarketplace.microsoft.com/en-us/marketplace/apps/CanonicalandMSOpenTech.DockerOnUbuntuServer1404LTS
   expanded: true
+  items:
+    - name: Docker Marketplace-sjabloon
+      href: 'https://azuremarketplace.microsoft.com/en-us/marketplace/apps/CanonicalandMSOpenTech.DockerOnUbuntuServer1404LTS'
 - name: Zelfstudies
   items:
-  - name: Python-webtoepassing met Docker en PostgreSQL
-    href: ../app-service/containers/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
-  - name: CI/CD met Docker Swarm en Azure DevOps
-    href: /azure/container-service/container-service-docker-swarm-mode-setup-ci-cd-acs-engine
-  - name: CI/CD met Docker, Jenkins en Linux
-    href: /azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd
+    - name: Python-webtoepassing met Docker en PostgreSQL
+      href: ../app-service/containers/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
+    - name: CI/CD met Docker Swarm en Azure DevOps
+      href: /azure/container-service/container-service-docker-swarm-mode-setup-ci-cd-acs-engine
+    - name: 'CI/CD met Docker, Jenkins en Linux'
+      href: /azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd
 - name: Handleidingen
   items:
-  - name: Docker-VM-extensie
-    href: /azure/virtual-machines/linux/dockerextension
-  - name: Docker Machine
-    href: /azure/virtual-machines/linux/docker-machine
-  - name: Docker-containerregister
-    href: /azure/container-registry/container-registry-get-started-portal
+    - name: Docker-VM-extensie
+      href: /azure/virtual-machines/linux/dockerextension
+    - name: Docker Machine
+      href: /azure/virtual-machines/linux/docker-machine
+    - name: Docker-containerregister
+      href: /azure/container-registry/container-registry-get-started-portal
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Docker Azure-stuurprogramma
-    href: https://docs.docker.com/machine/drivers/azure/
-  - name: Docker Azure-site
-    href: https://www.docker.com/docker-azure
-  - name: Docker-site
-    href: https://docker.com
-ms.openlocfilehash: 79a7bf072be65038000cbcbc17983b4d3b80684f
-ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47433766"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Docker Azure-stuurprogramma
+      href: 'https://docs.docker.com/machine/drivers/azure/'
+    - name: Docker Azure-site
+      href: 'https://www.docker.com/docker-azure'
+    - name: Docker-site
+      href: 'https://docker.com'
