--- a/articles/managed-applications/toc.yml
+++ b/articles/managed-applications/toc.yml
@@ -1,115 +1,108 @@
-items:
 - name: Documentatie voor door Azure beheerde toepassingen
   href: index.yml
 - name: Overzicht
   items:
-  - name: Over beheerde toepassingen
-    href: overview.md
+    - name: Over beheerde toepassingen
+      href: overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Toepassingsdefinitie publiceren
-    href: publish-managed-app-definition-quickstart.md
-  - name: Servicecatalogus-app implementeren
-    href: deploy-service-catalog-quickstart.md
   expanded: true
+  items:
+    - name: Toepassingsdefinitie publiceren
+      href: publish-managed-app-definition-quickstart.md
+    - name: Servicecatalogus-app implementeren
+      href: deploy-service-catalog-quickstart.md
 - name: Zelfstudies
   items:
-  - name: Definitiebestanden maken
-    href: publish-service-catalog-app.md
-  - name: Marketplace-toepassing publiceren
-    href: publish-marketplace-app.md
+    - name: Definitiebestanden maken
+      href: publish-service-catalog-app.md
+    - name: Marketplace-toepassing publiceren
+      href: publish-marketplace-app.md
 - name: Voorbeelden
   items:
-  - name: Azure-CLI
-    href: cli-samples.md
-  - name: Azure PowerShell
-    href: powershell-samples.md
-  - name: Beheerde toepassingsoplossingen
-    href: sample-projects.md
+    - name: Azure-CLI
+      href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
+    - name: Beheerde toepassingsoplossingen
+      href: sample-projects.md
 - name: Handleidingen
   items:
-  - name: Uitgevers
-    items:
-    - name: Portal-interface maken
-      href: create-uidefinition-overview.md
-    - name: Portal-interface testen
-      href: test-createuidefinition.md
-    - name: Beheerde bronnen bijwerken
-      href: update-managed-resources.md
-    - name: Portal gebruiken om toepassingsdefinitie te publiceren
-      href: publish-portal.md
-    - name: Een geheim van Key Vault gebruiken
-      href: key-vault-access.md
-  - name: Consumenten
-    items:
-    - name: Beheerde toepassing bewaken
-      href: monitor-managed-application-portal.md
+    - name: Uitgevers
+      items:
+        - name: Portal-interface maken
+          href: create-uidefinition-overview.md
+        - name: Portal-interface testen
+          href: test-createuidefinition.md
+        - name: Beheerde bronnen bijwerken
+          href: update-managed-resources.md
+        - name: Portal gebruiken om toepassingsdefinitie te publiceren
+          href: publish-portal.md
+        - name: Een geheim van Key Vault gebruiken
+          href: key-vault-access.md
+    - name: Consumenten
+      items:
+        - name: Beheerde toepassing bewaken
+          href: monitor-managed-application-portal.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/managedapp
-  - name: PowerShell
-    href: /powershell/module/az.resources
-  - name: REST
-    href: /rest/api/resources/
-  - name: Functies van de gebruikersinterface
-    href: create-uidefinition-functions.md
-  - name: Elementen van de gebruikersinterface
-    href: create-uidefinition-elements.md
-    items:
-    - name: Algemeen
+    - name: Azure-CLI
+      href: /cli/azure/managedapp
+    - name: PowerShell
+      href: /powershell/module/az.resources
+    - name: REST
+      href: /rest/api/resources/
+    - name: Functies van de gebruikersinterface
+      href: create-uidefinition-functions.md
+    - name: Elementen van de gebruikersinterface
+      href: create-uidefinition-elements.md
       items:
-      - name: Vervolgkeuzelijst
-        href: microsoft-common-dropdown.md
-      - name: Bestandsupload
-        href: microsoft-common-fileupload.md
-      - name: InfoBox
-        href: microsoft-common-infobox.md
-      - name: Optiegroep
-        href: microsoft-common-optionsgroup.md
-      - name: Wachtwoordveld
-        href: microsoft-common-passwordbox.md
-      - name: Sectie
-        href: microsoft-common-section.md
-      - name: TextBlock
-        href: microsoft-common-textblock.md
-      - name: Tekstvak
-        href: microsoft-common-textbox.md
-    - name: Compute
-      items:
-      - name: ReferentieCombo
-        href: microsoft-compute-credentialscombo.md
-      - name: SelectorGrootte
-        href: microsoft-compute-sizeselector.md
-      - name: Gebruikersnaamveld
-        href: microsoft-compute-usernametextbox.md
-    - name: Netwerk
-      items:
-      - name: OpenbaarIPAdresCombo
-        href: microsoft-network-publicipaddresscombo.md
-      - name: VirtueelNetwerkCombo
-        href: microsoft-network-virtualnetworkcombo.md
-    - name: Opslag
-      items:
-      - name: MultiStorageAccountCombo
-        href: microsoft-storage-multistorageaccountcombo.md
-      - name: StorageAccountSelector
-        href: microsoft-storage-storageaccountselector.md
+        - name: Algemeen
+          items:
+            - name: Vervolgkeuzelijst
+              href: microsoft-common-dropdown.md
+            - name: Bestandsupload
+              href: microsoft-common-fileupload.md
+            - name: InfoBox
+              href: microsoft-common-infobox.md
+            - name: Optiegroep
+              href: microsoft-common-optionsgroup.md
+            - name: Wachtwoordveld
+              href: microsoft-common-passwordbox.md
+            - name: Sectie
+              href: microsoft-common-section.md
+            - name: TextBlock
+              href: microsoft-common-textblock.md
+            - name: Tekstvak
+              href: microsoft-common-textbox.md
+        - name: Compute
+          items:
+            - name: ReferentieCombo
+              href: microsoft-compute-credentialscombo.md
+            - name: SelectorGrootte
+              href: microsoft-compute-sizeselector.md
+            - name: Gebruikersnaamveld
+              href: microsoft-compute-usernametextbox.md
+        - name: Netwerk
+          items:
+            - name: OpenbaarIPAdresCombo
+              href: microsoft-network-publicipaddresscombo.md
+            - name: VirtueelNetwerkCombo
+              href: microsoft-network-virtualnetworkcombo.md
+        - name: Opslag
+          items:
+            - name: MultiStorageAccountCombo
+              href: microsoft-storage-multistorageaccountcombo.md
+            - name: StorageAccountSelector
+              href: microsoft-storage-storageaccountselector.md
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/managed-applications/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Best practices voor Resource Manager-sjablonen
-    href: https://github.com/Azure/azure-quickstart-templates/blob/master/1-CONTRIBUTION-GUIDE/best-practices.md
-  - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-managedapps
-ms.openlocfilehash: e5ed2bab25c8140d12517e4757c028a7c6dd85d9
-ms.sourcegitcommit: 81fa781f907405c215073c4e0441f9952fe80fe5
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/25/2019
-ms.locfileid: "58402011"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/managed-applications/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Best practices voor Resource Manager-sjablonen
+      href: 'https://github.com/Azure/azure-quickstart-templates/blob/master/1-CONTRIBUTION-GUIDE/best-practices.md'
+    - name: Stack Overflow
+      href: 'http://stackoverflow.com/questions/tagged/azure-managedapps'
