--- a/articles/app-service/environment/toc.yml
+++ b/articles/app-service/environment/toc.yml
@@ -1,133 +1,126 @@
-items:
 - name: App Service-omgeving
 - name: Overzicht
   items:
-  - name: Over App Service-omgevingen
-    href: intro.md
+    - name: Over App Service-omgevingen
+      href: intro.md
 - name: Snelstartgidsen
-  items:
-  - name: Een externe App Service-omgeving maken
-    href: create-external-ase.md
-  - name: Een interne App Service-omgeving maken
-    href: create-ilb-ase.md
   expanded: true
+  items:
+    - name: Een externe App Service-omgeving maken
+      href: create-external-ase.md
+    - name: Een interne App Service-omgeving maken
+      href: create-ilb-ase.md
 - name: Zelfstudies
   items:
-  - name: Integratie met een WAF
-    href: app-service-app-service-environment-web-application-firewall.md
-  - name: TLS configureren
-    href: app-service-app-service-environment-custom-settings.md
+    - name: Integratie met een WAF
+      href: app-service-app-service-environment-web-application-firewall.md
+    - name: TLS configureren
+      href: app-service-app-service-environment-custom-settings.md
 - name: Voorbeelden
   items:
-  - name: Azure-CLI
-    href: ../samples-cli.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-  - name: Azure PowerShell
-    href: ../samples-powershell.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: Azure-CLI
+      href: ../samples-cli.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: Azure PowerShell
+      href: ../samples-powershell.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
 - name: Concepten
   items:
-  - name: Netwerkarchitectuur
-    href: network-info.md
-  - name: Geografisch verdeelde schaal
-    href: app-service-app-service-environment-geo-distributed-scale.md
-  - name: ASEv1
-    href: app-service-app-service-environment-intro.md
-  - name: Diagnostiek
-    href: ../overview-diagnostics.md
-  - name: Certificaten
-    href: certificates.md
+    - name: Netwerkarchitectuur
+      href: network-info.md
+    - name: Geografisch verdeelde schaal
+      href: app-service-app-service-environment-geo-distributed-scale.md
+    - name: ASEv1
+      href: app-service-app-service-environment-intro.md
+    - name: Diagnostiek
+      href: ../overview-diagnostics.md
+    - name: Certificaten
+      href: certificates.md
 - name: Handleidingen
   items:
-  - name: Een ASE gebruiken
-    href: using-an-ase.md
-  - name: Met Application Gateway integreren
-    href: integrate-with-application-gateway.md
-  - name: Een App Service-omgeving maken op basis van een sjabloon
-    href: create-from-template.md
-  - name: Een geforceerde tunnel configureren
-    href: forced-tunnel-support.md
-  - name: Firewall-integratie
-    href: firewall-integration.md
+    - name: Een ASE gebruiken
+      href: using-an-ase.md
+    - name: Met Application Gateway integreren
+      href: integrate-with-application-gateway.md
+    - name: Een App Service-omgeving maken op basis van een sjabloon
+      href: create-from-template.md
+    - name: Een geforceerde tunnel configureren
+      href: forced-tunnel-support.md
+    - name: Firewall-integratie
+      href: firewall-integration.md
 - name: Naslaginformatie
   items:
-  - name: Beheeradressen
-    href: management-addresses.md
-  - name: Documentatie voor ASEv1
-    items:
-    - name: ASEv1 maken
-      href: app-service-web-how-to-create-an-app-service-environment.md
-    - name: ASEv1 configureren
-      href: app-service-web-configure-an-app-service-environment.md
-    - name: Een interne ASEv1 maken
-      href: app-service-environment-with-internal-load-balancer.md
-    - name: Een interne ASEv1 maken op basis van een sjabloon
-      href: app-service-app-service-environment-create-ilb-ase-resourcemanager.md
-    - name: Automatisch schalen configureren in ASEv1
-      href: app-service-environment-auto-scale.md
-    - name: Een app uitschalen in ASEv1
-      href: app-service-web-scale-a-web-app-in-an-app-service-environment.md
-    - name: Netwerkarchitectuur
-      href: app-service-app-service-environment-network-architecture-overview.md
-    - name: Een web-app maken in ASEv1
-      href: app-service-web-how-to-create-a-web-app-in-an-ase.md
-    - name: Verbinding maken met een back-end
-      href: app-service-app-service-environment-securely-connecting-to-backend-resources.md
-    - name: ExpressRoute configureren
-      href: app-service-app-service-environment-network-configuration-expressroute.md
-    - name: Inkomend verkeer naar een openbare app beheren
-      href: app-service-app-service-environment-control-inbound-traffic.md
-    - name: Gelaagde beveiliging gebruiken
-      href: app-service-app-service-environment-layered-security.md
+    - name: Beheeradressen
+      href: management-addresses.md
+    - name: Documentatie voor ASEv1
+      items:
+        - name: ASEv1 maken
+          href: app-service-web-how-to-create-an-app-service-environment.md
+        - name: ASEv1 configureren
+          href: app-service-web-configure-an-app-service-environment.md
+        - name: Een interne ASEv1 maken
+          href: app-service-environment-with-internal-load-balancer.md
+        - name: Een interne ASEv1 maken op basis van een sjabloon
+          href: app-service-app-service-environment-create-ilb-ase-resourcemanager.md
+        - name: Automatisch schalen configureren in ASEv1
+          href: app-service-environment-auto-scale.md
+        - name: Een app uitschalen in ASEv1
+          href: app-service-web-scale-a-web-app-in-an-app-service-environment.md
+        - name: Netwerkarchitectuur
+          href: app-service-app-service-environment-network-architecture-overview.md
+        - name: Een web-app maken in ASEv1
+          href: app-service-web-how-to-create-a-web-app-in-an-ase.md
+        - name: Verbinding maken met een back-end
+          href: app-service-app-service-environment-securely-connecting-to-backend-resources.md
+        - name: ExpressRoute configureren
+          href: app-service-app-service-environment-network-configuration-expressroute.md
+        - name: Inkomend verkeer naar een openbare app beheren
+          href: app-service-app-service-environment-control-inbound-traffic.md
+        - name: Gelaagde beveiliging gebruiken
+          href: app-service-app-service-environment-layered-security.md
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/app-service/
-  - name: Quotumgegevens
-    href: ../../azure-subscription-service-limits.md#app-service-limits
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=app-service
-  - name: Aanbevolen procedures
-    href: ../app-service-best-practices.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-  - name: Voorbeelden
-    href: https://azure.microsoft.com/resources/samples/?service=app-service
-  - name: Video's
-    items:
-    - name: Azure-video's
-      href: https://azure.microsoft.com/resources/videos/index/?services=app-service
-    - name: Gebruik moderne PaaS voor bedrijven met Azure App Service
-      href: https://channel9.msdn.com/Events/Ignite/2016/BRK3205/player
-    - name: Zeer schaalbare en beveiligde apps implementeren
-      href: https://channel9.msdn.com/Events/Microsoft-Azure/AzureCon-2015/ACON325/player
-    - name: Web- en mobiele apps voor bedrijven uitvoeren op Azure App Service
-      href: https://channel9.msdn.com/Events/Ignite/2015/BRK3715/player
-  - name: Kookboeken
-    items:
-    - name: Implementatiescripts
-      href: https://azure.microsoft.com/documentation/scripts/
-  - name: Problemen oplossen
-    items:
-    - name: Problemen met Visual Studio oplossen
-      href: ../troubleshoot-dotnet-visual-studio.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-    - name: Problemen met Node.js-app oplossen
-      href: ../app-service-web-nodejs-best-practices-and-troubleshoot-guide.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-    - name: Problemen met HTTP 502 en 503 oplossen
-      href: ../troubleshoot-http-502-http-503.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-    - name: Prestatieproblemen oplossen
-      href: ../troubleshoot-performance-degradation.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-    - name: Veelgestelde vragen
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/app-service/'
+    - name: Quotumgegevens
+      href: '../../azure-subscription-service-limits.md#app-service-limits'
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=app-service'
+    - name: Aanbevolen procedures
+      href: ../app-service-best-practices.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+    - name: Voorbeelden
+      href: 'https://azure.microsoft.com/resources/samples/?service=app-service'
+    - name: Video's
       items:
-      - name: Veelgestelde vragen over beschikbaarheid, prestaties en toepassing
-        href: ../faq-availability-performance-application-issues.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-      - name: Veelgestelde vragen over implementatie
-        href: ../faq-deployment.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-      - name: Veelgestelde vragen over open-sourcetechnologieën
-        href: ../faq-open-source-technologies.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-      - name: Veelgestelde vragen over configuratie en beheer
-        href: ../faq-configuration-and-management.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
-ms.openlocfilehash: ddb677f58f0df8c15c3fc1c9972f83aedfbe469e
-ms.sourcegitcommit: 549070d281bb2b5bf282bc7d46f6feab337ef248
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "53716664"
+        - name: Azure-video's
+          href: 'https://azure.microsoft.com/resources/videos/index/?services=app-service'
+        - name: Gebruik moderne PaaS voor bedrijven met Azure App Service
+          href: 'https://channel9.msdn.com/Events/Ignite/2016/BRK3205/player'
+        - name: Zeer schaalbare en beveiligde apps implementeren
+          href: 'https://channel9.msdn.com/Events/Microsoft-Azure/AzureCon-2015/ACON325/player'
+        - name: Web- en mobiele apps voor bedrijven uitvoeren op Azure App Service
+          href: 'https://channel9.msdn.com/Events/Ignite/2015/BRK3715/player'
+    - name: Kookboeken
+      items:
+        - name: Implementatiescripts
+          href: 'https://azure.microsoft.com/documentation/scripts/'
+    - name: Problemen oplossen
+      items:
+        - name: Problemen met Visual Studio oplossen
+          href: ../troubleshoot-dotnet-visual-studio.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+        - name: Problemen met Node.js-app oplossen
+          href: ../app-service-web-nodejs-best-practices-and-troubleshoot-guide.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+        - name: Problemen met HTTP 502 en 503 oplossen
+          href: ../troubleshoot-http-502-http-503.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+        - name: Prestatieproblemen oplossen
+          href: ../troubleshoot-performance-degradation.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+        - name: Veelgestelde vragen
+          items:
+            - name: 'Veelgestelde vragen over beschikbaarheid, prestaties en toepassing'
+              href: ../faq-availability-performance-application-issues.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+            - name: Veelgestelde vragen over implementatie
+              href: ../faq-deployment.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+            - name: Veelgestelde vragen over open-sourcetechnologieën
+              href: ../faq-open-source-technologies.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
+            - name: Veelgestelde vragen over configuratie en beheer
+              href: ../faq-configuration-and-management.md?toc=%2fazure%2fapp-service%2fenvironment%2ftoc.json
