--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a539e1db4fb86adb9f1fcf1f478e24e5de5edbdb
-ms.sourcegitcommit: 943af92555ba640288464c11d84e01da948db5c0
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/09/2019
-ms.locfileid: "55983233"
 documentType: LandingData
 title: Documentatie van Azure Functions
 metadata:
@@ -21,109 +15,109 @@ metadata:
   ms.date: 08/09/2018
   ms.author: carolz
 abstract:
-  description: Azure Functions is een <a href="https://azure.microsoft.com/solutions/serverless/">serverloze</a> compute-service waarmee u code op aanvraag kunt uitvoeren zonder expliciet een infrastructuur in te richten of te beheren. Met Azure Functions kunt u een script of een stukje code uitvoeren in reactie op diverse gebeurtenissen. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Functions gebruikt.
+  description: 'Azure Functions is een <a href="https://azure.microsoft.com/solutions/serverless/">serverloze</a> compute-service waarmee u code op aanvraag kunt uitvoeren zonder expliciet een infrastructuur in te richten of te beheren. Met Azure Functions kunt u een script of een stukje code uitvoeren in reactie op diverse gebeurtenissen. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Functions gebruikt.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video-thumb-get-started.png
       width: 250
-    title: Aan de slag met Azure Functions. (2:39)
-    href: https://azure.microsoft.com/resources/videos/get-started-with-azure-functions/
+    title: 'Aan de slag met Azure Functions. (2:39)'
+    href: 'https://azure.microsoft.com/resources/videos/get-started-with-azure-functions/'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Lees hoe u functies maakt die worden uitgevoerd op basis van gebeurtenissen die zijn gemaakt via:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_http.svg
-      text: HTTP
-      href: /azure/azure-functions/functions-create-first-azure-function
-    - image:
-        src: media/index/stopwatch.svg
-      text: Timer
-      href: /azure/azure-functions/functions-create-scheduled-function
-    - image:
-        src: media/index/cosmosdb.svg
-      text: Azure Cosmos DB
-      href: /azure/azure-functions/functions-create-cosmos-db-triggered-function
-    - image:
-        src: media/index/blob.svg
-      text: Blob
-      href: /azure/azure-functions/functions-create-storage-blob-triggered-function
-    - image:
-        src: media/index/storage.svg
-      text: Wachtrij
-      href: /azure/azure-functions/functions-create-storage-queue-triggered-function
-  - type: paragraph
-    text: 'Meer informatie over lokaal ontwikkelen en fouten opsporen:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Lees hoe u functies maakt die worden uitgevoerd op basis van gebeurtenissen die zijn gemaakt via:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_http.svg'
+            text: HTTP
+            href: /azure/azure-functions/functions-create-first-azure-function
+          - image:
+              src: media/index/stopwatch.svg
+            text: Timer
+            href: /azure/azure-functions/functions-create-scheduled-function
+          - image:
+              src: media/index/cosmosdb.svg
+            text: Azure Cosmos DB
+            href: /azure/azure-functions/functions-create-cosmos-db-triggered-function
+          - image:
+              src: media/index/blob.svg
+            text: Blob
+            href: /azure/azure-functions/functions-create-storage-blob-triggered-function
+          - image:
+              src: media/index/storage.svg
+            text: Wachtrij
+            href: /azure/azure-functions/functions-create-storage-queue-triggered-function
+      - type: paragraph
+        text: 'Meer informatie over lokaal ontwikkelen en fouten opsporen:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: Visual Studio
+            href: /azure/azure-functions/functions-create-your-first-function-visual-studio
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_vs-code.svg'
+            text: Visual Studio Code
+            href: /azure/azure-functions/functions-create-first-function-vs-code
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: Visual Studio
-      href: /azure/azure-functions/functions-create-your-first-function-visual-studio
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_vs-code.svg
-      text: Visual Studio Code
-      href: /azure/azure-functions/functions-create-first-function-vs-code
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: 'Meer informatie over functies in Azure Functions maken en beheren:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Meer informatie over functies in Azure Functions maken en beheren:'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/azure-functions/functions-twitter-email">Een functie maken die kan worden geïntegreerd met Azure Logic Apps</a>
+          - html: <a href="/azure/azure-functions/functions-create-serverless-api">Een serverloze API maken met behulp van Azure Functions</a>
+          - html: <a href="/azure/azure-functions/functions-openapi-definition">De OpenAPI-definitie maken voor een functie</a>
+          - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Het wijzigen van het formaat van geüploade afbeeldingen automatiseren met behulp van Event Grid</a>
+          - html: '<a href="https://docs.microsoft.com/azure/functions/tutorial-static-website-serverless-api-with-database">Een serverloze web-app maken voor het opslaan van afbeeldingen met metagegevens</a>'
+  - title: Voorbeelden
     items:
-    - html: <a href="/azure/azure-functions/functions-twitter-email">Een functie maken die kan worden geïntegreerd met Azure Logic Apps</a>
-    - html: <a href="/azure/azure-functions/functions-create-serverless-api">Een serverloze API maken met behulp van Azure Functions</a>
-    - html: <a href="/azure/azure-functions/functions-openapi-definition">De OpenAPI-definitie maken voor een functie</a>
-    - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Het wijzigen van het formaat van geüploade afbeeldingen automatiseren met behulp van Event Grid</a>
-    - html: <a href="https://docs.microsoft.com/azure/functions/tutorial-static-website-serverless-api-with-database">Een serverloze web-app maken voor het opslaan van afbeeldingen met metagegevens</a>
-- title: Voorbeelden
-  items:
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/azure-functions/functions-cli-samples">Azure-CLI</a>
+          - html: <a href="/sandbox/functions-recipes/">Azure Functions Recipes</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - html: <a href="/azure/azure-functions/functions-cli-samples">Azure-CLI</a>
-    - html: <a href="/sandbox/functions-recipes/">Azure Functions Recipes</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Serverloze logica maken met Azure Functions
+            href: /learn/modules/create-serverless-logic-with-azure-functions/
+            image:
+              src: /learn/achievements/create-serverless-logic-with-azure-functions.svg
+              href: /learn/modules/create-serverless-logic-with-azure-functions/
+          - title: Een Azure Function uitvoeren met triggers
+            href: /learn/modules/execute-azure-function-with-triggers/
+            image:
+              src: /learn/achievements/execute-azure-function-with-triggers.svg
+              href: /learn/modules/execute-azure-function-with-triggers/
+          - title: Azure Functions en gegevens met elkaar verbinding met behulp van invoer- en uitvoerbindingen
+            href: /learn/modules/chain-azure-functions-data-using-bindings/
+            image:
+              src: /learn/achievements/chain-azure-functions-data-using-bindings.svg
+              href: /learn/modules/chain-azure-functions-data-using-bindings/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-functions">Meer interactief leren...</a>
+  - title: Naslaginformatie
     items:
-    - title: Serverloze logica maken met Azure Functions
-      href: /learn/modules/create-serverless-logic-with-azure-functions/
-      image:
-        src: /learn/achievements/create-serverless-logic-with-azure-functions.svg
-        href: /learn/modules/create-serverless-logic-with-azure-functions/
-    - title: Een Azure Function uitvoeren met triggers
-      href: /learn/modules/execute-azure-function-with-triggers/
-      image:
-        src: /learn/achievements/execute-azure-function-with-triggers.svg
-        href: /learn/modules/execute-azure-function-with-triggers/
-    - title: Azure Functions en gegevens met elkaar verbinding met behulp van invoer- en uitvoerbindingen
-      href: /learn/modules/chain-azure-functions-data-using-bindings/
-      image:
-        src: /learn/achievements/chain-azure-functions-data-using-bindings.svg
-        href: /learn/modules/chain-azure-functions-data-using-bindings/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-functions">Meer interactief leren...</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Opdrachtregel
-      html: <p><a href="/cli/azure">Azure-CLI</a></p>
-    - title: REST
-      html: <p><a href="/azure/azure-functions/functions-api-definition">OpenAPI</a></p>
-    - title: Bindingen
-      html: <p><a href="/azure/azure-functions/functions-bindings-storage-blob">Blob Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-documentdb">Azure Cosmos DB</a></p><p><a href="/azure/azure-functions/functions-bindings-event-hubs">Event Hub</a></p><p><a href="/azure/azure-functions/functions-bindings-http-webhook">HTTP en webhooks</a></p><p><a href="/azure/azure-functions/functions-bindings-mobile-apps">Mobile Apps</a></p><p><a href="/azure/azure-functions/functions-bindings-notification-hubs">Notification Hubs</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-queue">Queue Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-sendgrid">SendGrid</a></p><p><a href="/azure/azure-functions/functions-bindings-service-bus">Service Bus</a></p><p><a href="/azure/azure-functions/functions-bindings-signalr-service">SignalR Service</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-table">Table Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-timer">Timer</a></p><p><a href="/azure/azure-functions/functions-bindings-twilio">Twilio-uitvoerbinding</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/cli/azure">Azure-CLI</a></p>
+          - title: REST
+            html: <p><a href="/azure/azure-functions/functions-api-definition">OpenAPI</a></p>
+          - title: Bindingen
+            html: <p><a href="/azure/azure-functions/functions-bindings-storage-blob">Blob Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-documentdb">Azure Cosmos DB</a></p><p><a href="/azure/azure-functions/functions-bindings-event-hubs">Event Hub</a></p><p><a href="/azure/azure-functions/functions-bindings-http-webhook">HTTP en webhooks</a></p><p><a href="/azure/azure-functions/functions-bindings-mobile-apps">Mobile Apps</a></p><p><a href="/azure/azure-functions/functions-bindings-notification-hubs">Notification Hubs</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-queue">Queue Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-sendgrid">SendGrid</a></p><p><a href="/azure/azure-functions/functions-bindings-service-bus">Service Bus</a></p><p><a href="/azure/azure-functions/functions-bindings-signalr-service">SignalR Service</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-table">Table Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-timer">Timer</a></p><p><a href="/azure/azure-functions/functions-bindings-twilio">Twilio-uitvoerbinding</a></p>
