--- a/articles/azure-supportability/TOC.yml
+++ b/articles/azure-supportability/TOC.yml
@@ -1,4 +1,3 @@
-items:
 - name: Een ondersteuningsaanvraag maken voor Azure
   href: how-to-create-azure-support-request.md
 - name: Bestanden uploaden voor een ondersteuningsaanvraag
@@ -11,19 +10,13 @@ items:
   href: sku-series-unavailable.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure
-  - name: Azure PowerShell
-    href: /powershell/azure
+    - name: Azure-CLI
+      href: /cli/azure
+    - name: Azure PowerShell
+      href: /powershell/azure
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=monitoring-management
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-ms.openlocfilehash: 31120ea857d0e080bc9629d781ac2cdd73d31bc0
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58340911"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=monitoring-management'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
