--- a/articles/cognitive-services/bing-local-business-search/index.yml
+++ b/articles/cognitive-services/bing-local-business-search/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 888ed15344ff3709a7a84d5be7e863535bed1792
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56734690"
 documentType: LandingData
 title: Documentatie voor de Bing-API voor zoeken naar lokale bedrijven
 titleSuffix: Azure Cognitive Services
@@ -19,44 +13,45 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 08/02/2018
-  ms.author: rosh, v-gedod
+  ms.author: 'rosh, v-gedod'
 abstract:
   description: De Bing-API voor zoeken naar lokale bedrijven stelt uw toepassingen in staat om contact- en locatiegegevens van lokale bedrijven te vinden op basis van zoekquery's.
 sections:
-- title: Snelstartgidsen
-  items:
-  - type: paragraph
-    text: "Ga aan de slag met de Bing-API voor zoeken naar lokale bedrijven door zoekquery's te versturen en het JSON-antwoord weer te geven:"
-  - type: list
-    style: icon48
+  - title: Snelstartgidsen
     items:
-    - image:
-        src: media/logo_csharp.svg
-      href: quickstarts/local-quickstart.md
-      text: C#
-    - image:
-        src: media/logo_java.svg
-      href: quickstarts/local-search-java-quickstart.md
-      text: Java
-    - image:
-        src: media/logo_nodejs.svg
-      href: quickstarts/local-search-node-quickstart.md
-      text: Knooppunt
-    - image:
-        src: media/logo_python.svg
-      href: quickstarts/local-search-python-quickstart.md
-      text: Python
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Ga aan de slag met de Bing-API voor zoeken naar lokale bedrijven door zoekquery''s te versturen en het JSON-antwoord weer te geven:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/logo_csharp.svg
+            href: quickstarts/local-quickstart.md
+            text: 'C#'
+          - image:
+              src: media/logo_java.svg
+            href: quickstarts/local-search-java-quickstart.md
+            text: Java
+          - image:
+              src: media/logo_nodejs.svg
+            href: quickstarts/local-search-node-quickstart.md
+            text: Knooppunt
+          - image:
+              src: media/logo_python.svg
+            href: quickstarts/local-search-python-quickstart.md
+            text: Python
+  - title: Naslaginformatie
     items:
-    - title: REST-API
-      html: >
-        <p><a href="local-search-reference.md">Naslaginformatie over REST API</a></p>
-    - title: PowerShell
-      html: >
-        <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
-    - title: CLI
-      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest">Azure-CLI</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST-API
+            html: |
+              <p><a href="local-search-reference.md">Naslaginformatie over REST API</a></p>
+          - title: PowerShell
+            html: |
+              <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
+          - title: CLI
+            html: |
+              <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest">Azure-CLI</a></p>
