--- a/articles/containers/index.yml
+++ b/articles/containers/index.yml
@@ -1,17 +1,11 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 89376bf654a23b37e004a1b9b00e32a0c2ac3e2a
-ms.sourcegitcommit: 5978d82c619762ac05b19668379a37a40ba5755b
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55495069"
 documentType: LandingData
 title: Azure voor containers
 metadata:
-  document_id: 
-  title: Azure voor containers - Quickstarts, zelfstudies, API-verwijzing
-  description: Aan de slag met containerapps beheren en implementeren met Azure met quickstarts, zelfstudies en hulpprogramma's voor containers.
-  keywords: Azure, containers, Docker, API, Kubernetes
+  document_id: null
+  title: 'Azure voor containers - Quickstarts, zelfstudies, API-verwijzing'
+  description: 'Aan de slag met containerapps beheren en implementeren met Azure met quickstarts, zelfstudies en hulpprogramma''s voor containers.'
+  keywords: 'Azure, containers, Docker, API, Kubernetes'
   author: dlepow
   ms.author: danlep
   manager: jeconnoc
@@ -19,68 +13,69 @@ metadata:
   ms.topic: article
   ms.prod: azure
   featureFlags:
-  - clicktale
+    - clicktale
   ms.technology: azure
   ms.devlang: multiple
   ms.service: multiple
 sections:
-- items:
-  - type: markdown
-    text: "Aan de slag met containerapps beheren en implementeren met Azure-hulpprogramma's en -services voor containers. \n"
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u containers gebruikt in Azure-services.
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 2
+  - items:
+      - type: markdown
+        text: |
+          Aan de slag met containerapps beheren en implementeren met Azure-hulpprogramma's en -services voor containers. 
+  - title: QuickStarts van vijf minuten
     items:
-    - href: ../aks/kubernetes-walkthrough.md
-      title: Een Kubernetes-cluster maken met Azure Kubernetes Service (AKS)
-      image:
-        src: /azure/media/index/ContainerService.svg
-    - href: https://docs.microsoft.com/azure/service-fabric/service-fabric-quickstart-containers
-      title: Een Windows-containertoepassing implementeren met Service Fabric
-      image:
-        src: /azure/media/index/Fabric.svg
-    - href: https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go
-      title: Een in een container geplaatste app maken met Azure Web Apps for Containers
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_linux.svg
-    - href: https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli
-      title: Een privé-Docker-register maken met de Azure Container Registry
-      image:
-        src: /azure/media/index/container-registry.svg
-    - href: https://docs.microsoft.com/azure/container-instances/container-instances-quickstart
-      title: Een container-app op aanvraag uitvoeren in Azure Container Instances
-      image:
-        src: /azure/media/index/containerinstances.svg
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Informatie over hoe u containerapps met Azure-services implementeert, beheert en bijwerkt
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Leer hoe u containers gebruikt in Azure-services.
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 2
+        items:
+          - href: ../aks/kubernetes-walkthrough.md
+            title: Een Kubernetes-cluster maken met Azure Kubernetes Service (AKS)
+            image:
+              src: /azure/media/index/ContainerService.svg
+          - href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-quickstart-containers'
+            title: Een Windows-containertoepassing implementeren met Service Fabric
+            image:
+              src: /azure/media/index/Fabric.svg
+          - href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go'
+            title: Een in een container geplaatste app maken met Azure Web Apps for Containers
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+          - href: 'https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli'
+            title: Een privé-Docker-register maken met de Azure Container Registry
+            image:
+              src: /azure/media/index/container-registry.svg
+          - href: 'https://docs.microsoft.com/azure/container-instances/container-instances-quickstart'
+            title: Een container-app op aanvraag uitvoeren in Azure Container Instances
+            image:
+              src: /azure/media/index/containerinstances.svg
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Een container bouwen en implementeren in Azure Kubernetes Service</a>
-    - html: <a href="/azure/service-fabric/service-fabric-host-app-in-a-container">Een .NET-containerapp bouwen en implementeren in Azure Service Fabric</a>
-    - html: <a href="/azure/app-service/containers/tutorial-multi-container-app">Een app met meerdere containers bouwen in Web App for Containers</a>
-    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-task">Containerinstallatiekopieën bouwen met Azure Container Registry-taken</a>
-    - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Een container bouwen en implementeren in Azure Container Instances</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Informatie over hoe u containerapps met Azure-services implementeert, beheert en bijwerkt'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Een container bouwen en implementeren in Azure Kubernetes Service</a>
+          - html: <a href="/azure/service-fabric/service-fabric-host-app-in-a-container">Een .NET-containerapp bouwen en implementeren in Azure Service Fabric</a>
+          - html: <a href="/azure/app-service/containers/tutorial-multi-container-app">Een app met meerdere containers bouwen in Web App for Containers</a>
+          - html: <a href="/azure/container-registry/container-registry-tutorial-quick-task">Containerinstallatiekopieën bouwen met Azure Container Registry-taken</a>
+          - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Een container bouwen en implementeren in Azure Container Instances</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - title: Docker-containers uitvoeren met Azure Container Instances
-      href: /learn/modules/run-docker-with-azure-container-instances/
-      image:
-        src: /learn/achievements/run-docker-with-azure-container-instances.svg
-        href: /learn/modules/run-docker-with-azure-container-instances/
-    - title: Containerinstallatiekopieën bouwen en opslaan met Azure Container Registry
-      href: /learn/modules/build-and-store-container-images/
-      image:
-        src: /learn/achievements/build-and-store-container-images.svg
-        href: /learn/modules/build-and-store-container-images/
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Docker-containers uitvoeren met Azure Container Instances
+            href: /learn/modules/run-docker-with-azure-container-instances/
+            image:
+              src: /learn/achievements/run-docker-with-azure-container-instances.svg
+              href: /learn/modules/run-docker-with-azure-container-instances/
+          - title: Containerinstallatiekopieën bouwen en opslaan met Azure Container Registry
+            href: /learn/modules/build-and-store-container-images/
+            image:
+              src: /learn/achievements/build-and-store-container-images.svg
+              href: /learn/modules/build-and-store-container-images/
