--- a/articles/cost-management/toc.yml
+++ b/articles/cost-management/toc.yml
@@ -1,125 +1,118 @@
-items:
 - name: Documentatie voor Kostenbeheer van Azure
   href: index.yml
   items:
-  - name: Overzicht
-    items:
-    - name: Wat is Kostenbeheer?
-      href: overview-cost-mgt.md
-  - name: Snelstartgidsen
-    items:
-    - name: Beginnen met analyseren van kosten
-      href: quick-acm-cost-analysis.md
-    expanded: true
-  - name: Zelfstudies
-    items:
-    - name: 1 - Budgetten maken en beheren
-      href: tutorial-acm-create-budgets.md
-    - name: 2 - Gegevens exporteren
-      href: tutorial-export-acm-data.md
-    - name: 3 - Aanbevelingen opvolgen
-      href: tutorial-acm-opt-recommendations.md
-  - name: Concepten
-    items:
-    - name: Best practices voor Azure Cost Management
-      href: cost-mgt-best-practices.md
-    - name: Inzicht in gegevens van Cost Management
-      href: understand-cost-mgt-data.md
-    - name: Bereiken begrijpen en gebruiken
-      href: understand-work-scopes.md
-    - name: Migreren van EA naar MCA-API's
-      href: migrate-cost-management-api.md
-  - name: Handleidingen
-    items:
-    - name: Toegang tot gegevens toewijzen
-      href: assign-access-acm-data.md
-    - name: Kostenwaarschuwingen gebruiken
-      href: cost-mgt-alerts-monitor-usage-spending.md
-  - name: Naslaginformatie
-    items:
-    - name: Azure Cost Management REST API
-      href: https://docs.microsoft.com/rest/api/cost-management
-    - name: Azure Consumption REST API
-      href: https://docs.microsoft.com/rest/api/consumption
-    - name: Resource Manager-sjabloon
-      href: /azure/templates/microsoft.consumption/budgets
-  - name: Resources
-    items:
-    - name: Uw vaardigheden ontwikkelen met Microsoft Learn
-      href: /learn/browse/?products=azure-cost-management
-    - name: Feedbackforum voor Cost Management
-      href: https://feedback.azure.com/forums/906772-cost-management
-    - name: Azure-roadmap
-      href: https://azure.microsoft.com/roadmap/
-    - name: Prijzen
-      href: https://azure.microsoft.com/pricing/details/cost-management
-    - name: Regionale beschikbaarheid
-      href: https://azure.microsoft.com/regions/services/
-  - name: Cloudyn
-    items:
     - name: Overzicht
       items:
-      - name: Wat is Cloudyn?
-        href: overview.md
+        - name: Wat is Kostenbeheer?
+          href: overview-cost-mgt.md
     - name: Snelstartgidsen
+      expanded: true
       items:
-      - name: Kostengegevens weergeven
-        href: quick-register-azure-sub.md
-      - name: Kostengegevens weergeven - EA
-        href: quick-register-ea.md
-      - name: Kostengegevens weergeven - CSP
-        href: quick-register-csp.md
+        - name: Beginnen met analyseren van kosten
+          href: quick-acm-cost-analysis.md
     - name: Zelfstudies
       items:
-      - name: 1 - Gebruik en kosten controleren
-        href: tutorial-review-usage.md
-      - name: 2 - Uitgaven voorspellen
-        href: tutorial-forecast-spending.md
-      - name: 3 - Kosten beheren
-        href: tutorial-manage-costs.md
-      - name: 4 - Gereserveerde instanties optimaliseren
-        href: tutorial-optimize-reserved-instances.md
-      - name: 5 - Toegang tot gegevens beheren
-        href: tutorial-user-access.md
+        - name: 1 - Budgetten maken en beheren
+          href: tutorial-acm-create-budgets.md
+        - name: 2 - Gegevens exporteren
+          href: tutorial-export-acm-data.md
+        - name: 3 - Aanbevelingen opvolgen
+          href: tutorial-acm-opt-recommendations.md
     - name: Concepten
       items:
-      - name: Inzicht krijgen in kostenrapporten
-        href: understanding-cost-reports.md
+        - name: Best practices voor Azure Cost Management
+          href: cost-mgt-best-practices.md
+        - name: Inzicht in gegevens van Cost Management
+          href: understand-cost-mgt-data.md
+        - name: Bereiken begrijpen en gebruiken
+          href: understand-work-scopes.md
+        - name: Migreren van EA naar MCA-API's
+          href: migrate-cost-management-api.md
     - name: Handleidingen
       items:
-      - name: Azure-abonnementen en -accounts activeren
-        href: activate-subs-accounts.md
-      - name: Uitgebreide metrische gegevens voor virtuele machines toevoegen
-        href: azure-vm-extended-metrics.md
-      - name: Verbinding maken met een Google-account
-        href: connect-google-account.md
-      - name: Verbinding maken met een AWS-account
-        href: connect-aws-account.md
-      - name: Opslagaccounts configureren
-        href: storage-accounts.md
-      - name: Cloudyn-rapporten gebruiken
-        href: use-reports.md
-      - name: Dashboards gebruiken
-        href: dashboards.md
-      - name: Budgetten beheren
-        href: manage-budgets.md
+        - name: Toegang tot gegevens toewijzen
+          href: assign-access-acm-data.md
+        - name: Kostenwaarschuwingen gebruiken
+          href: cost-mgt-alerts-monitor-usage-spending.md
+    - name: Naslaginformatie
+      items:
+        - name: Azure Cost Management REST API
+          href: 'https://docs.microsoft.com/rest/api/cost-management'
+        - name: Azure Consumption REST API
+          href: 'https://docs.microsoft.com/rest/api/consumption'
+        - name: Resource Manager-sjabloon
+          href: /azure/templates/microsoft.consumption/budgets
     - name: Resources
       items:
-      - name: Cloudyn-video's
-        href: ref-videos.md
-      - name: Azure-roadmap
-        href: https://azure.microsoft.com/roadmap/
-      - name: Prijzen van Cloudyn
-        href: https://azure.microsoft.com/pricing/details/cost-management
-      - name: Regionale beschikbaarheid van Cloudyn
-        href: https://azure.microsoft.com/regions/services/
-      - name: Veelgestelde vragen over Cloudyn
-        href: cost-mgt-faq.md
-      - name: Contact opnemen met de ondersteuning van Cloudyn
-        href: support-request-cost-management.md
-ms.openlocfilehash: b9e987d0f839b3ea0c13b15cdb27e8cb9de5b5dc
-ms.sourcegitcommit: 90dcc3d427af1264d6ac2b9bde6cdad364ceefcc
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58312509"
+        - name: Uw vaardigheden ontwikkelen met Microsoft Learn
+          href: /learn/browse/?products=azure-cost-management
+        - name: Feedbackforum voor Cost Management
+          href: 'https://feedback.azure.com/forums/906772-cost-management'
+        - name: Azure-roadmap
+          href: 'https://azure.microsoft.com/roadmap/'
+        - name: Prijzen
+          href: 'https://azure.microsoft.com/pricing/details/cost-management'
+        - name: Regionale beschikbaarheid
+          href: 'https://azure.microsoft.com/regions/services/'
+    - name: Cloudyn
+      items:
+        - name: Overzicht
+          items:
+            - name: Wat is Cloudyn?
+              href: overview.md
+        - name: Snelstartgidsen
+          items:
+            - name: Kostengegevens weergeven
+              href: quick-register-azure-sub.md
+            - name: Kostengegevens weergeven - EA
+              href: quick-register-ea.md
+            - name: Kostengegevens weergeven - CSP
+              href: quick-register-csp.md
+        - name: Zelfstudies
+          items:
+            - name: 1 - Gebruik en kosten controleren
+              href: tutorial-review-usage.md
+            - name: 2 - Uitgaven voorspellen
+              href: tutorial-forecast-spending.md
+            - name: 3 - Kosten beheren
+              href: tutorial-manage-costs.md
+            - name: 4 - Gereserveerde instanties optimaliseren
+              href: tutorial-optimize-reserved-instances.md
+            - name: 5 - Toegang tot gegevens beheren
+              href: tutorial-user-access.md
+        - name: Concepten
+          items:
+            - name: Inzicht krijgen in kostenrapporten
+              href: understanding-cost-reports.md
+        - name: Handleidingen
+          items:
+            - name: Azure-abonnementen en -accounts activeren
+              href: activate-subs-accounts.md
+            - name: Uitgebreide metrische gegevens voor virtuele machines toevoegen
+              href: azure-vm-extended-metrics.md
+            - name: Verbinding maken met een Google-account
+              href: connect-google-account.md
+            - name: Verbinding maken met een AWS-account
+              href: connect-aws-account.md
+            - name: Opslagaccounts configureren
+              href: storage-accounts.md
+            - name: Cloudyn-rapporten gebruiken
+              href: use-reports.md
+            - name: Dashboards gebruiken
+              href: dashboards.md
+            - name: Budgetten beheren
+              href: manage-budgets.md
+        - name: Resources
+          items:
+            - name: Cloudyn-video's
+              href: ref-videos.md
+            - name: Azure-roadmap
+              href: 'https://azure.microsoft.com/roadmap/'
+            - name: Prijzen van Cloudyn
+              href: 'https://azure.microsoft.com/pricing/details/cost-management'
+            - name: Regionale beschikbaarheid van Cloudyn
+              href: 'https://azure.microsoft.com/regions/services/'
+            - name: Veelgestelde vragen over Cloudyn
+              href: cost-mgt-faq.md
+            - name: Contact opnemen met de ondersteuning van Cloudyn
+              href: support-request-cost-management.md
