--- a/articles/data-catalog/TOC.yml
+++ b/articles/data-catalog/TOC.yml
@@ -1,91 +1,84 @@
-items:
 - name: Documentatie over Data Catalog
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Data Catalog?
-    href: overview.md
+    - name: Wat is Data Catalog?
+      href: overview.md
 - name: Snelstartgids
   items:
-  - name: Een Azure Data Catalog maken
-    href: data-catalog-get-started.md
+    - name: Een Azure Data Catalog maken
+      href: data-catalog-get-started.md
 - name: Zelfstudies
   items:
-  - name: Gegevensassets registreren
-    href: register-data-assets-tutorial.md
+    - name: Gegevensassets registreren
+      href: register-data-assets-tutorial.md
 - name: Concepten
   items:
-  - name: Algemene scenario's
-    href: data-catalog-common-scenarios.md
-  - name: Ondersteunde gegevensbronnen
-    href: data-catalog-dsr.md
-  - name: Overstappen op Azure Data Catalog
-    href: data-catalog-adopting-data-catalog.md
-  - name: Vereisten
-    href: data-catalog-prerequisites.md
-  - name: Veelgestelde vragen
-    href: data-catalog-frequently-asked-questions.md
+    - name: Algemene scenario's
+      href: data-catalog-common-scenarios.md
+    - name: Ondersteunde gegevensbronnen
+      href: data-catalog-dsr.md
+    - name: Overstappen op Azure Data Catalog
+      href: data-catalog-adopting-data-catalog.md
+    - name: Vereisten
+      href: data-catalog-prerequisites.md
+    - name: Veelgestelde vragen
+      href: data-catalog-frequently-asked-questions.md
 - name: Procedures
   items:
-  - name: Gegevensbronnen registreren
-    href: data-catalog-how-to-register.md
-  - name: Gegevensbronnen zoeken
-    href: data-catalog-how-to-discover.md
-  - name: Aantekeningen toevoegen aan gegevensbronnen
-    href: data-catalog-how-to-annotate.md
-  - name: Gegevensbronnen documenteren
-    href: data-catalog-how-to-documentation.md
-  - name: Verbinding maken met gegevensbronnen
-    href: data-catalog-how-to-connect.md
-  - name: Werken met bronnen met big data
-    href: data-catalog-how-to-big-data.md
-  - name: Gegevensbronnen met gegevensprofielen
-    href: data-catalog-how-to-data-profile.md
-  - name: Gegevensassets beheren
-    href: data-catalog-how-to-manage.md
-  - name: Zoekopdrachten opslaan en gegevensassets vastzetten
-    href: data-catalog-how-to-save-pin.md
-  - name: De zakelijke woordenlijst instellen
-    href: data-catalog-how-to-business-glossary.md
-  - name: Toegang tot de gegevenscatalogus beveiligen
-    href: data-catalog-how-to-secure-catalog.md
-  - name: Gerelateerde gegevensassets weergeven
-    href: data-catalog-how-to-view-related-data-assets.md
-  - name: Problemen oplossen
-    href: troubleshoot-policy-configuration.md
+    - name: Gegevensbronnen registreren
+      href: data-catalog-how-to-register.md
+    - name: Gegevensbronnen zoeken
+      href: data-catalog-how-to-discover.md
+    - name: Aantekeningen toevoegen aan gegevensbronnen
+      href: data-catalog-how-to-annotate.md
+    - name: Gegevensbronnen documenteren
+      href: data-catalog-how-to-documentation.md
+    - name: Verbinding maken met gegevensbronnen
+      href: data-catalog-how-to-connect.md
+    - name: Werken met bronnen met big data
+      href: data-catalog-how-to-big-data.md
+    - name: Gegevensbronnen met gegevensprofielen
+      href: data-catalog-how-to-data-profile.md
+    - name: Gegevensassets beheren
+      href: data-catalog-how-to-manage.md
+    - name: Zoekopdrachten opslaan en gegevensassets vastzetten
+      href: data-catalog-how-to-save-pin.md
+    - name: De zakelijke woordenlijst instellen
+      href: data-catalog-how-to-business-glossary.md
+    - name: Toegang tot de gegevenscatalogus beveiligen
+      href: data-catalog-how-to-secure-catalog.md
+    - name: Gerelateerde gegevensassets weergeven
+      href: data-catalog-how-to-view-related-data-assets.md
+    - name: Problemen oplossen
+      href: troubleshoot-policy-configuration.md
 - name: Naslaginformatie
   items:
-  - name: Codevoorbeelden
-    href: https://azure.microsoft.com/resources/samples/?service=data-catalog
-  - name: REST
-    href: /rest/api/datacatalog/
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.datacatalog/catalogs
-  - name: Naslaginformatie over zoeksyntaxis
-    href: /rest/api/datacatalog/data-catalog-search-syntax-reference
-  - name: Concepten van ontwikkelaars
-    href: data-catalog-developer-concepts.md
+    - name: Codevoorbeelden
+      href: 'https://azure.microsoft.com/resources/samples/?service=data-catalog'
+    - name: REST
+      href: /rest/api/datacatalog/
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.datacatalog/catalogs
+    - name: Naslaginformatie over zoeksyntaxis
+      href: /rest/api/datacatalog/data-catalog-search-syntax-reference
+    - name: Concepten van ontwikkelaars
+      href: data-catalog-developer-concepts.md
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Sneltoetsen voor Azure Data Catalog
-    href: data-catalog-keyboard-shortcuts.md
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=azuredatacatalog
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/data-catalog/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=data-catalog
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-data-catalog
-  - name: Terminologie
-    href: data-catalog-terminology.md
-ms.openlocfilehash: 0ef4cb62b8991db67df52fded512c1881050eac3
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59793924"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Sneltoetsen voor Azure Data Catalog
+      href: data-catalog-keyboard-shortcuts.md
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=azuredatacatalog'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/data-catalog/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=data-catalog'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-data-catalog'
+    - name: Terminologie
+      href: data-catalog-terminology.md
