--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -1,120 +1,113 @@
-items:
 - name: Documentatie voor Azure Data Box - Online overdracht
   href: /azure/databox-online/
   expanded: true
 - name: Data Box Gateway
   items:
-  - name: Overzicht
-    items:
-    - name: Wat is Data Box Gateway?
-      href: data-box-gateway-overview.md
-  - name: Zelfstudies
-    items:
-    - name: 1 - Voorbereiden
-      href: data-box-gateway-deploy-prep.md
-    - name: 2A - Inrichten in Hyper-V
-      href: data-box-gateway-deploy-provision-hyperv.md
-    - name: 2B - Inrichten in VMware
-      href: data-box-gateway-deploy-provision-vmware.md
-    - name: 3 - Verbinding maken, instellen, activeren
-      href: data-box-gateway-deploy-connect-setup-activate.md
-    - name: 4 - Share toevoegen, verbinding maken met share
-      href: data-box-gateway-deploy-add-shares.md
-  - name: Concepten
-    items:
-    - name: Vereisten beoordelen
-      href: data-box-gateway-system-requirements.md
-    - name: Limieten begrijpen
-      href: data-box-gateway-limits.md
-    - name: Beveiligingsoverzicht
-      href: data-box-gateway-security.md
-    - name: Gebruiksvoorbeelden bekijken
-      href: data-box-gateway-use-cases.md
-  - name: Procedures
-    items:
-    - name: Beheren
+    - name: Overzicht
       items:
-      - name: Shares
-        href: data-box-gateway-manage-shares.md
-      - name: Gebruikers
-        href: data-box-gateway-manage-users.md
-      - name: Bandbreedteschema's
-        href: data-box-gateway-manage-bandwidth-schedules.md
-      - name: Toegang, voeding, connectiviteit
-        href: data-box-gateway-manage-access-power-connectivity-mode.md
-      - name: Via PowerShell
-        href: data-box-gateway-connect-powershell-interface.md
-    - name: Controleren
-      href: data-box-gateway-monitor.md
-    - name: Problemen oplossen
-      href: data-box-gateway-troubleshoot.md
-  - name: Releaseopmerkingen
-    items:
-    - name: Algemene beschikbaarheid
-      href: data-box-gateway-release-notes.md
+        - name: Wat is Data Box Gateway?
+          href: data-box-gateway-overview.md
+    - name: Zelfstudies
+      items:
+        - name: 1 - Voorbereiden
+          href: data-box-gateway-deploy-prep.md
+        - name: 2A - Inrichten in Hyper-V
+          href: data-box-gateway-deploy-provision-hyperv.md
+        - name: 2B - Inrichten in VMware
+          href: data-box-gateway-deploy-provision-vmware.md
+        - name: '3 - Verbinding maken, instellen, activeren'
+          href: data-box-gateway-deploy-connect-setup-activate.md
+        - name: '4 - Share toevoegen, verbinding maken met share'
+          href: data-box-gateway-deploy-add-shares.md
+    - name: Concepten
+      items:
+        - name: Vereisten beoordelen
+          href: data-box-gateway-system-requirements.md
+        - name: Limieten begrijpen
+          href: data-box-gateway-limits.md
+        - name: Beveiligingsoverzicht
+          href: data-box-gateway-security.md
+        - name: Gebruiksvoorbeelden bekijken
+          href: data-box-gateway-use-cases.md
+    - name: Procedures
+      items:
+        - name: Beheren
+          items:
+            - name: Shares
+              href: data-box-gateway-manage-shares.md
+            - name: Gebruikers
+              href: data-box-gateway-manage-users.md
+            - name: Bandbreedteschema's
+              href: data-box-gateway-manage-bandwidth-schedules.md
+            - name: 'Toegang, voeding, connectiviteit'
+              href: data-box-gateway-manage-access-power-connectivity-mode.md
+            - name: Via PowerShell
+              href: data-box-gateway-connect-powershell-interface.md
+        - name: Controleren
+          href: data-box-gateway-monitor.md
+        - name: Problemen oplossen
+          href: data-box-gateway-troubleshoot.md
+    - name: Releaseopmerkingen
+      items:
+        - name: Algemene beschikbaarheid
+          href: data-box-gateway-release-notes.md
 - name: Data Box Edge
   items:
-  - name: Overzicht
-    items:
-    - name: Wat is Azure Data Box Edge?
-      href: data-box-edge-overview.md
-  - name: Zelfstudies
-    items:
-    - name: 1 - Voorbereiden
-      href: data-box-edge-deploy-prep.md
-    - name: 2 - Installeren
-      href: data-box-edge-deploy-install.md
-    - name: 3 - Verbinding maken, instellen, activeren
-      href: data-box-edge-deploy-connect-setup-activate.md
-    - name: 4 - Share toevoegen, verbinding maken met share
-      href: data-box-edge-deploy-add-shares.md
-    - name: 5 - Rekenproces configureren
-      href: data-box-edge-deploy-configure-compute.md
-  - name: Concepten
-    items:
-    - name: Vereisten beoordelen
-      href: data-box-edge-system-requirements.md
-    - name: Limieten begrijpen
-      href: data-box-edge-limits.md
-    - name: Beveiligingsoverzicht
-      href: data-box-edge-security.md
-    - name: Specificaties doornemen
-      href: data-box-edge-technical-specifications-compliance.md
-  - name: Procedures
-    items:
-    - name: Compute beheren
-      href: data-box-edge-manage-compute.md
-    - name: C#-module ontwikkelen
-      href: data-box-edge-create-iot-edge-module.md
-    - name: Shares beheren
-      href: data-box-edge-manage-shares.md
-    - name: Gebruikers beheren
-      href: data-box-edge-manage-users.md
-    - name: Bandbreedteschema's beheren
-      href: data-box-edge-manage-bandwidth-schedules.md
-    - name: Energieopties, toegang en connectiviteit beheren
-      href: data-box-edge-manage-access-power-connectivity-mode.md
-    - name: Beheren met behulp van PowerShell
-      href: data-box-edge-connect-powershell-interface.md
-    - name: Problemen oplossen
-      href: data-box-edge-troubleshoot.md
-    - name: Controleren
-      href: data-box-edge-monitor.md
-  - name: Releaseopmerkingen
-    items:
-    - name: Algemene beschikbaarheid
-      href: data-box-gateway-release-notes.md
+    - name: Overzicht
+      items:
+        - name: Wat is Azure Data Box Edge?
+          href: data-box-edge-overview.md
+    - name: Zelfstudies
+      items:
+        - name: 1 - Voorbereiden
+          href: data-box-edge-deploy-prep.md
+        - name: 2 - Installeren
+          href: data-box-edge-deploy-install.md
+        - name: '3 - Verbinding maken, instellen, activeren'
+          href: data-box-edge-deploy-connect-setup-activate.md
+        - name: '4 - Share toevoegen, verbinding maken met share'
+          href: data-box-edge-deploy-add-shares.md
+        - name: 5 - Rekenproces configureren
+          href: data-box-edge-deploy-configure-compute.md
+    - name: Concepten
+      items:
+        - name: Vereisten beoordelen
+          href: data-box-edge-system-requirements.md
+        - name: Limieten begrijpen
+          href: data-box-edge-limits.md
+        - name: Beveiligingsoverzicht
+          href: data-box-edge-security.md
+        - name: Specificaties doornemen
+          href: data-box-edge-technical-specifications-compliance.md
+    - name: Procedures
+      items:
+        - name: Compute beheren
+          href: data-box-edge-manage-compute.md
+        - name: 'C#-module ontwikkelen'
+          href: data-box-edge-create-iot-edge-module.md
+        - name: Shares beheren
+          href: data-box-edge-manage-shares.md
+        - name: Gebruikers beheren
+          href: data-box-edge-manage-users.md
+        - name: Bandbreedteschema's beheren
+          href: data-box-edge-manage-bandwidth-schedules.md
+        - name: 'Energieopties, toegang en connectiviteit beheren'
+          href: data-box-edge-manage-access-power-connectivity-mode.md
+        - name: Beheren met behulp van PowerShell
+          href: data-box-edge-connect-powershell-interface.md
+        - name: Problemen oplossen
+          href: data-box-edge-troubleshoot.md
+        - name: Controleren
+          href: data-box-edge-monitor.md
+    - name: Releaseopmerkingen
+      items:
+        - name: Algemene beschikbaarheid
+          href: data-box-gateway-release-notes.md
 - name: Resources
   items:
-  - name: Voorbeelden van Data Box Edge C#-module (.NET)
-    href: https://azure.microsoft.com/resources/samples/data-box-edge-csharp-modules/
-  - name: Data Box Edge/Gateway-product
-    href: https://azure.microsoft.com/services/storage/databox/edge/
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/storage/databox/edge/
-ms.openlocfilehash: f601de8c731354c6d01cfdc6de60115904a37d07
-ms.sourcegitcommit: c3d1aa5a1d922c172654b50a6a5c8b2a6c71aa91
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/17/2019
-ms.locfileid: "59679615"
+    - name: 'Voorbeelden van Data Box Edge C#-module (.NET)'
+      href: 'https://azure.microsoft.com/resources/samples/data-box-edge-csharp-modules/'
+    - name: Data Box Edge/Gateway-product
+      href: 'https://azure.microsoft.com/services/storage/databox/edge/'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/storage/databox/edge/'
