--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -1,127 +1,120 @@
-items:
 - name: Azure Digital Twins
   href: index.yml
 - name: Overzicht
   items:
-  - name: Over Azure Digital Twins
-    href: about-digital-twins.md
+    - name: Over Azure Digital Twins
+      href: about-digital-twins.md
 - name: Snelstartgidsen
   items:
-  - name: Beschikbare ruimten zoeken
-    href: quickstart-view-occupancy-dotnet.md
+    - name: Beschikbare ruimten zoeken
+      href: quickstart-view-occupancy-dotnet.md
 - name: Zelfstudies
   items:
-  - name: Een gebouw bewaken met Digital Twins
-    items:
-    - name: Implementeren en configureren
-      href: tutorial-facilities-setup.md
-    - name: Omstandigheden inrichten en bewaken
-      href: tutorial-facilities-udf.md
-    - name: Meldingen versturen met Logic Apps
-      href: tutorial-facilities-events.md
-    - name: Gebeurtenissen visualiseren met TSI
-      href: tutorial-facilities-analyze.md
+    - name: Een gebouw bewaken met Digital Twins
+      items:
+        - name: Implementeren en configureren
+          href: tutorial-facilities-setup.md
+        - name: Omstandigheden inrichten en bewaken
+          href: tutorial-facilities-udf.md
+        - name: Meldingen versturen met Logic Apps
+          href: tutorial-facilities-events.md
+        - name: Gebeurtenissen visualiseren met TSI
+          href: tutorial-facilities-analyze.md
 - name: Concepten
   items:
-  - name: Objectmodel en graaf voor ruimtelijke intelligentie van Digital Twins
-    href: concepts-objectmodel-spatialgraph.md
-  - name: Apparaatconnectiviteit en inkomende telemetriegegevens
-    href: concepts-device-ingress.md
-  - name: Gegevensverwerking en door gebruikers gedefinieerde functies
-    href: concepts-user-defined-functions.md
-  - name: Routering van gebeurtenissen en berichten
-    href: concepts-events-routing.md
-  - name: Servicebeperkingen van de openbare preview
-    href: concepts-service-limits.md
-  - name: Beveiliging
-    items:
-    - name: Aanbevolen procedures voor beveiliging
-      href: security-best-practices.md
-    - name: Toegangsbeheer op basis van rollen
-      href: security-role-based-access-control.md
-    - name: Roltoewijzingen maken en beheren
-      href: security-create-manage-role-assignments.md
-    - name: Verificatie via beheer-API's
-      href: security-authenticating-apis.md
+    - name: Objectmodel en graaf voor ruimtelijke intelligentie van Digital Twins
+      href: concepts-objectmodel-spatialgraph.md
+    - name: Apparaatconnectiviteit en inkomende telemetriegegevens
+      href: concepts-device-ingress.md
+    - name: Gegevensverwerking en door gebruikers gedefinieerde functies
+      href: concepts-user-defined-functions.md
+    - name: Routering van gebeurtenissen en berichten
+      href: concepts-events-routing.md
+    - name: Servicebeperkingen van de openbare preview
+      href: concepts-service-limits.md
+    - name: Beveiliging
+      items:
+        - name: Aanbevolen procedures voor beveiliging
+          href: security-best-practices.md
+        - name: Toegangsbeheer op basis van rollen
+          href: security-role-based-access-control.md
+        - name: Roltoewijzingen maken en beheren
+          href: security-create-manage-role-assignments.md
+        - name: Verificatie via beheer-API's
+          href: security-authenticating-apis.md
 - name: Handleidingen
   items:
-  - name: Multitenant-toepassingen inschakelen
-    href: how-to-multitenant-applications.md
-  - name: Door gebruikers gedefinieerde functies maken
-    href: how-to-user-defined-functions.md
-  - name: Gebeurtenissen en berichten via eindpunten routeren
-    href: how-to-egress-endpoints.md
-  - name: Blobs toevoegen aan objecten
-    href: how-to-add-blobs.md
-  - name: Digital Twins Swagger gebruiken
-    href: how-to-use-swagger.md
-  - name: Problemen met door gebruiker gedefinieerde functies oplossen
-    href: how-to-diagnose-user-defined-functions.md
-  - name: Bewaking configureren
-    href: how-to-configure-monitoring.md
-  - name: Query's uitvoeren op Digital Twins-API's
-    items:
-    - name: Postman instellen
-      href: how-to-configure-postman.md
-    - name: Digital Twins-API's gebruiken
-      href: how-to-navigate-apis.md
-    - name: Veelvoorkomende querypatronen
-      href: how-to-query-common-apis.md
+    - name: Multitenant-toepassingen inschakelen
+      href: how-to-multitenant-applications.md
+    - name: Door gebruikers gedefinieerde functies maken
+      href: how-to-user-defined-functions.md
+    - name: Gebeurtenissen en berichten via eindpunten routeren
+      href: how-to-egress-endpoints.md
+    - name: Blobs toevoegen aan objecten
+      href: how-to-add-blobs.md
+    - name: Digital Twins Swagger gebruiken
+      href: how-to-use-swagger.md
+    - name: Problemen met door gebruiker gedefinieerde functies oplossen
+      href: how-to-diagnose-user-defined-functions.md
+    - name: Bewaking configureren
+      href: how-to-configure-monitoring.md
+    - name: Query's uitvoeren op Digital Twins-API's
+      items:
+        - name: Postman instellen
+          href: how-to-configure-postman.md
+        - name: Digital Twins-API's gebruiken
+          href: how-to-navigate-apis.md
+        - name: Veelvoorkomende querypatronen
+          href: how-to-query-common-apis.md
 - name: Naslaginformatie
   items:
-  - name: Bibliotheek met door de gebruiker gedefinieerde functies
-    href: reference-user-defined-functions-client-library.md
+    - name: Bibliotheek met door de gebruiker gedefinieerde functies
+      href: reference-user-defined-functions-client-library.md
 - name: Verwant
   items:
-  - name: Oplossingen
-    items:
-    - name: IoT-oplossingsversnellers
-      href: /azure/iot-accelerators
-    - name: IoT Central
-      href: https://docs.microsoft.com/microsoft-iot-central/
-  - name: Platformservices
-    items:
-    - name: IoT Hub
-      href: /azure/iot-hub
-    - name: IoT Hub Device Provisioning Service
-      href: /azure/iot-dps
-    - name: IoT Service-SDK's
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
-    - name: Kaarten
-      href: /azure/azure-maps
-    - name: Time Series Insights
-      href: /azure/time-series-insights
-  - name: Edge
-    items:
-    - name: IoT Edge
-      href: /azure/iot-edge
-    - name: IoT Device-SDK's
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
+    - name: Oplossingen
+      items:
+        - name: IoT-oplossingsversnellers
+          href: /azure/iot-accelerators
+        - name: IoT Central
+          href: 'https://docs.microsoft.com/microsoft-iot-central/'
+    - name: Platformservices
+      items:
+        - name: IoT Hub
+          href: /azure/iot-hub
+        - name: IoT Hub Device Provisioning Service
+          href: /azure/iot-dps
+        - name: IoT Service-SDK's
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+        - name: Kaarten
+          href: /azure/azure-maps
+        - name: Time Series Insights
+          href: /azure/time-series-insights
+    - name: Edge
+      items:
+        - name: IoT Edge
+          href: /azure/iot-edge
+        - name: IoT Device-SDK's
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
 - name: Resources
   items:
-  - name: Azure Digital Twins-voorbeelden voor C# (.NET)
-    href: https://github.com/Azure-Samples/digital-twins-samples-csharp
-  - name: REST API voor Azure Digital Twins
-    href: https://docs.westcentralus.azuresmartspaces.net/management/swagger
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/digital-twins/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Graph Viewer voor Azure Digital Twins
-    href: https://github.com/Azure/azure-digital-twins-graph-viewer
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-digital-twins
-  - name: Verhalen van klanten
-    href: https://blogs.microsoft.com/iot/2018/09/24/announcing-azure-digital-twins-create-digital-replicas-of-spaces-and-infrastructure-using-cloud-ai-and-iot/
-  - name: Azure IoT-ontwikkelaarscentrum
-    href: https://azure.microsoft.com/develop/iot/
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Video's
-    href: https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22&lang-en=true
-ms.openlocfilehash: 0a76dbffc41106af5df540d29c1d7171f1506202
-ms.sourcegitcommit: c6dc9abb30c75629ef88b833655c2d1e78609b89
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58664859"
+    - name: 'Azure Digital Twins-voorbeelden voor C# (.NET)'
+      href: 'https://github.com/Azure-Samples/digital-twins-samples-csharp'
+    - name: REST API voor Azure Digital Twins
+      href: 'https://docs.westcentralus.azuresmartspaces.net/management/swagger'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/digital-twins/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Graph Viewer voor Azure Digital Twins
+      href: 'https://github.com/Azure/azure-digital-twins-graph-viewer'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-digital-twins'
+    - name: Verhalen van klanten
+      href: 'https://blogs.microsoft.com/iot/2018/09/24/announcing-azure-digital-twins-create-digital-replicas-of-spaces-and-infrastructure-using-cloud-ai-and-iot/'
+    - name: Azure IoT-ontwikkelaarscentrum
+      href: 'https://azure.microsoft.com/develop/iot/'
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
+    - name: Video's
+      href: 'https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22&lang-en=true'
