--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f0d4a689e783f8c460ee54b3613ac0fe432b59ad
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57862784"
 documentType: LandingData
 title: Azure IoT Edge
 metadata:
-  title: Azure IoT Edge - zelfstudies, API-referentiemateriaal
+  title: 'Azure IoT Edge - zelfstudies, API-referentiemateriaal'
   description: Gebruik Azure IoT Edge om Azure-services en aangepaste bedrijfslogica te implementeren in apparaten in Edge.
   author: kgremban
   manager: philmea
@@ -18,46 +12,46 @@ metadata:
   ms.date: 03/13/2019
   ms.author: kgremban
 abstract:
-  description: Azure IoT Edge is een Internet of Things-service (IoT-service) die voortbouwt op IoT Hub. Deze service is bedoeld voor klanten die ook gegevens willen analyseren op apparaten, oftewel 'aan de rand', in plaats van in de cloud. Door delen van uw werkbelasting naar de rand te verplaatsen, hoeven uw apparaten minder tijd te besteden aan het verzenden van berichten naar de cloud en kunnen ze sneller reageren op statuswijzigingen.
+  description: 'Azure IoT Edge is een Internet of Things-service (IoT-service) die voortbouwt op IoT Hub. Deze service is bedoeld voor klanten die ook gegevens willen analyseren op apparaten, oftewel ''aan de rand'', in plaats van in de cloud. Door delen van uw werkbelasting naar de rand te verplaatsen, hoeven uw apparaten minder tijd te besteden aan het verzenden van berichten naar de cloud en kunnen ze sneller reageren op statuswijzigingen.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/iot-edge-thumbnail.png
       width: 250
-    title: De intelligente rand maken met Azure IoT Edge (6:59)
-    href: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Creating-the-intelligent-edge-with-Azure-IoT-Edge
+    title: 'De intelligente rand maken met Azure IoT Edge (6:59)'
+    href: 'https://channel9.msdn.com/Shows/Internet-of-Things-Show/Creating-the-intelligent-edge-with-Azure-IoT-Edge'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Maak een virtuele Azure-machine, configureer deze voor uitvoering als IoT Edge-apparaat en implementeer er code in:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      text: Windows
-      href: /azure/iot-edge/quickstart
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_linux-color.svg
-      text: Linux
-      href: /azure/iot-edge/quickstart-linux
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Informatie over het installeren en configureren van IoT Edge, het implementeren van modules en het gebruik van Azure-services zoals Stream Analytics en Custom Vision aan de rand.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Maak een virtuele Azure-machine, configureer deze voor uitvoering als IoT Edge-apparaat en implementeer er code in:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            text: Windows
+            href: /azure/iot-edge/quickstart
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux-color.svg'
+            text: Linux
+            href: /azure/iot-edge/quickstart-linux
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/iot-edge/tutorial-deploy-function">Berichten filteren met Azure Functions</a>
-    - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Gemiddelden vinden met Azure Stream Analytics als module</a>
-    - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Gegevens een score geven met Azure Machine Learning als module</a>
-    - html: <a href="/azure/iot-edge/tutorial-deploy-custom-vision">Afbeeldingen classificeren met Custom Vision Service als module</a>
-    - html: <a href="/azure/iot-edge/tutorial-csharp-module">Gegevens filteren met een C#-module</a>
-    - html: <a href="/azure/iot-edge/tutorial-python-module">Gegevens filteren met een Python-module</a>
-    - html: <a href="/azure/iot-edge/tutorial-node-module">Gegevens filteren met een Node.js-module</a>
-    - html: <a href="/azure/iot-edge/tutorial-java-module">Gegevens filteren met een Java-module</a>
-    - html: <a href="/azure/iot-edge/tutorial-c-module">Gegevens filteren met een C-module</a>
-    - html: <a href="/azure/iot-edge/tutorial-store-data-sql-server">Gegevens opslaan aan de rand met SQL Server</a>
+      - type: paragraph
+        text: 'Informatie over het installeren en configureren van IoT Edge, het implementeren van modules en het gebruik van Azure-services zoals Stream Analytics en Custom Vision aan de rand.'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/iot-edge/tutorial-deploy-function">Berichten filteren met Azure Functions</a>
+          - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Gemiddelden vinden met Azure Stream Analytics als module</a>
+          - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Gegevens een score geven met Azure Machine Learning als module</a>
+          - html: <a href="/azure/iot-edge/tutorial-deploy-custom-vision">Afbeeldingen classificeren met Custom Vision Service als module</a>
+          - html: '<a href="/azure/iot-edge/tutorial-csharp-module">Gegevens filteren met een C#-module</a>'
+          - html: <a href="/azure/iot-edge/tutorial-python-module">Gegevens filteren met een Python-module</a>
+          - html: <a href="/azure/iot-edge/tutorial-node-module">Gegevens filteren met een Node.js-module</a>
+          - html: <a href="/azure/iot-edge/tutorial-java-module">Gegevens filteren met een Java-module</a>
+          - html: <a href="/azure/iot-edge/tutorial-c-module">Gegevens filteren met een C-module</a>
+          - html: <a href="/azure/iot-edge/tutorial-store-data-sql-server">Gegevens opslaan aan de rand met SQL Server</a>
