--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: bf548ff69d7ce92e8d08759a96a241adc5a36c0b
-ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54828125"
 documentType: LandingData
 title: Documentatie voor IoT Hub
 metadata:
-  title: Documentatie voor Azure IoT Hub - zelfstudies, API-verwijzing | Microsoft Docs
-  description: Meer informatie over hoe u IoT Hub gebruikt om miljarden IoT-items (Internet der dingen) te verbinden, bewaken en controleren. Zelfstudies, API-verwijzingen, video’s en andere documentatie.
+  title: 'Documentatie voor Azure IoT Hub - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Meer informatie over hoe u IoT Hub gebruikt om miljarden IoT-items (Internet der dingen) te verbinden, bewaken en controleren. Zelfstudies, API-verwijzingen, video’s en andere documentatie.'
   author: dominicbetts
   manager: timlt
   ms.service: iot-hub
@@ -18,80 +12,80 @@ metadata:
   ms.date: 04/26/2018
   ms.author: dobett
 abstract:
-  description: Meer informatie over hoe u IoT Hub gebruikt om miljarden IoT-items (Internet der dingen) te verbinden, bewaken en controleren. Zelfstudies, API-verwijzingen, video's en andere documentatie helpen u om betrouwbaar en bidirectionele communicatie tussen IoT-apparaten en een oplossingsback-end te implementeren.
+  description: 'Meer informatie over hoe u IoT Hub gebruikt om miljarden IoT-items (Internet der dingen) te verbinden, bewaken en controleren. Zelfstudies, API-verwijzingen, video''s en andere documentatie helpen u om betrouwbaar en bidirectionele communicatie tussen IoT-apparaten en een oplossingsback-end te implementeren.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_nodejs.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_NET.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_java.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_python.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_android.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_c.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_ios.svg
-    rows:
-    - title: Telemetrie verzenden
-      values:
-      - href: /azure/iot-hub/quickstart-send-telemetry-node
-      - href: /azure/iot-hub/quickstart-send-telemetry-dotnet
-      - href: /azure/iot-hub/quickstart-send-telemetry-java
-      - href: /azure/iot-hub/quickstart-send-telemetry-python
-      - href: /azure/iot-hub/quickstart-send-telemetry-android
-      - href: /azure/iot-hub/quickstart-send-telemetry-c
-      - href: /azure/iot-hub/quickstart-send-telemetry-ios
-    - title: Een apparaat beheren
-      values:
-      - href: /azure/iot-hub/quickstart-control-device-node
-      - href: /azure/iot-hub/quickstart-control-device-dotnet
-      - href: /azure/iot-hub/quickstart-control-device-java
-      - href: /azure/iot-hub/quickstart-control-device-python
-      - href: /azure/iot-hub/quickstart-control-device-android
-    - title: Communiceren met behulp van apparaatstreams (preview)
-      values:
-      - href: /azure/iot-hub/quickstart-device-streams-echo-nodejs
-      - href: /azure/iot-hub/quickstart-device-streams-echo-csharp
-      - href: 
-      - href: 
-      - href: 
-      - href: /azure/iot-hub/quickstart-device-streams-echo-c
-      - href: 
-    - title: SSH/RDP met behulp van apparaatstreams (preview)
-      values:
-      - href: /azure/iot-hub/quickstart-device-streams-proxy-nodejs
-      - href: /azure/iot-hub/quickstart-device-streams-proxy-csharp
-      - href: 
-      - href: 
-      - href: 
-      - href: /azure/iot-hub/quickstart-device-streams-proxy-c
-      - href: 
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: list
-    style: ordered
+  - title: QuickStarts van vijf minuten
     items:
-    - html: <a href="/azure/iot-hub/tutorial-routing">Geautomatiseerde berichtroutering in IoT-Hub configureren</a>
-    - html: <a href="/azure/iot-hub/tutorial-device-twins">Uw apparaten configureren vanaf een back-endservice</a>
-    - html: <a href="/azure/iot-hub/tutorial-firmware-update">Een apparaatfirmware-updateproces implementeren</a>
-    - html: <a href="/azure/iot-hub/tutorial-connectivity">Een gesimuleerd apparaat gebruiken om connectiviteit met uw IoT-hub te testen</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_nodejs.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_NET.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_java.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_python.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_android.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_c.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_ios.svg'
+        rows:
+          - title: Telemetrie verzenden
+            values:
+              - href: /azure/iot-hub/quickstart-send-telemetry-node
+              - href: /azure/iot-hub/quickstart-send-telemetry-dotnet
+              - href: /azure/iot-hub/quickstart-send-telemetry-java
+              - href: /azure/iot-hub/quickstart-send-telemetry-python
+              - href: /azure/iot-hub/quickstart-send-telemetry-android
+              - href: /azure/iot-hub/quickstart-send-telemetry-c
+              - href: /azure/iot-hub/quickstart-send-telemetry-ios
+          - title: Een apparaat beheren
+            values:
+              - href: /azure/iot-hub/quickstart-control-device-node
+              - href: /azure/iot-hub/quickstart-control-device-dotnet
+              - href: /azure/iot-hub/quickstart-control-device-java
+              - href: /azure/iot-hub/quickstart-control-device-python
+              - href: /azure/iot-hub/quickstart-control-device-android
+          - title: Communiceren met behulp van apparaatstreams (preview)
+            values:
+              - href: /azure/iot-hub/quickstart-device-streams-echo-nodejs
+              - href: /azure/iot-hub/quickstart-device-streams-echo-csharp
+              - href: null
+              - href: null
+              - href: null
+              - href: /azure/iot-hub/quickstart-device-streams-echo-c
+              - href: null
+          - title: SSH/RDP met behulp van apparaatstreams (preview)
+            values:
+              - href: /azure/iot-hub/quickstart-device-streams-proxy-nodejs
+              - href: /azure/iot-hub/quickstart-device-streams-proxy-csharp
+              - href: null
+              - href: null
+              - href: null
+              - href: /azure/iot-hub/quickstart-device-streams-proxy-c
+              - href: null
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/cli/azure/iot">Azure-CLI</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/microsoft.azure.devices">.NET (service)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (apparaten)</a></p><p><a href="https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/">C (SDK-apparaat)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (service)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (apparaten)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (service)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (apparaten)</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/iothub/device">REST (apparaat)</a></p><p><a href="/rest/api/iothub/service">REST (service)</a></p><p><a href="/rest/api/iothub/iothubresource">REST (IoT Hub-resource)</a></p><p><a href="/rest/api/iothub/certificates">REST (certificaten)</a></p>
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/iot-hub/tutorial-routing">Geautomatiseerde berichtroutering in IoT-Hub configureren</a>
+          - html: <a href="/azure/iot-hub/tutorial-device-twins">Uw apparaten configureren vanaf een back-endservice</a>
+          - html: <a href="/azure/iot-hub/tutorial-firmware-update">Een apparaatfirmware-updateproces implementeren</a>
+          - html: <a href="/azure/iot-hub/tutorial-connectivity">Een gesimuleerd apparaat gebruiken om connectiviteit met uw IoT-hub te testen</a>
+  - title: Naslaginformatie
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/cli/azure/iot">Azure-CLI</a></p>
+          - title: Talen
+            html: '<p><a href="/dotnet/api/microsoft.azure.devices">.NET (service)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (apparaten)</a></p><p><a href="https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/">C (SDK-apparaat)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (service)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (apparaten)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (service)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (apparaten)</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/iothub/device">REST (apparaat)</a></p><p><a href="/rest/api/iothub/service">REST (service)</a></p><p><a href="/rest/api/iothub/iothubresource">REST (IoT Hub-resource)</a></p><p><a href="/rest/api/iothub/certificates">REST (certificaten)</a></p>
