--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -1,174 +1,167 @@
-items:
 - name: Documentatie voor Azure DB voor MariaDB
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Azure DB voor MariaDB?
-    href: overview.md
+    - name: Wat is Azure DB voor MariaDB?
+      href: overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Database maken - Portal
-    href: quickstart-create-mariadb-server-database-using-azure-portal.md
-  - name: Database maken - Azure CLI
-    href: quickstart-create-mariadb-server-database-using-azure-cli.md
-  - name: Verbinding maken en query uitvoeren
-    items:
-    - name: MySQL Workbench
-      href: connect-workbench.md
   expanded: true
+  items:
+    - name: Database maken - Portal
+      href: quickstart-create-mariadb-server-database-using-azure-portal.md
+    - name: Database maken - Azure CLI
+      href: quickstart-create-mariadb-server-database-using-azure-cli.md
+    - name: Verbinding maken en query uitvoeren
+      items:
+        - name: MySQL Workbench
+          href: connect-workbench.md
 - name: Zelfstudies
   items:
-  - name: Een database ontwerpen
-    items:
-    - name: Azure Portal
-      href: tutorial-design-database-using-portal.md
-    - name: Azure-CLI
-      href: tutorial-design-database-cli.md
+    - name: Een database ontwerpen
+      items:
+        - name: Azure Portal
+          href: tutorial-design-database-using-portal.md
+        - name: Azure-CLI
+          href: tutorial-design-database-cli.md
 - name: Voorbeelden
   items:
-  - name: Azure-CLI
-    href: sample-scripts-azure-cli.md
+    - name: Azure-CLI
+      href: sample-scripts-azure-cli.md
 - name: Concepten
   items:
-  - name: DB en servers
-    items:
-    - name: Servers
-      href: concepts-servers.md
-    - name: Ondersteunde versies
-      href: concepts-supported-versions.md
-    - name: Hoge beschikbaarheid
-      href: concepts-high-availability.md
-  - name: Resources
-    items:
-    - name: Prijscategorieën
-      href: concepts-pricing-tiers.md
-    - name: Limieten
-      href: concepts-limits.md
-  - name: Gegevenstoegang en -beveiliging
-    items:
-    - name: Firewall-regels
-      href: concepts-firewall-rules.md
-    - name: SSL configureren
-      href: concepts-ssl-connection-security.md
-    - name: VNet
-      href: concepts-data-access-security-vnet.md
-  - name: Bedrijfscontinuïteit
-    items:
-    - name: Overzicht
-      href: concepts-business-continuity.md
-    - name: Back-ups en herstellen
-      href: concepts-backup.md
-  - name: Controleren
-    items:
+    - name: DB en servers
+      items:
+        - name: Servers
+          href: concepts-servers.md
+        - name: Ondersteunde versies
+          href: concepts-supported-versions.md
+        - name: Hoge beschikbaarheid
+          href: concepts-high-availability.md
+    - name: Resources
+      items:
+        - name: Prijscategorieën
+          href: concepts-pricing-tiers.md
+        - name: Limieten
+          href: concepts-limits.md
+    - name: Gegevenstoegang en -beveiliging
+      items:
+        - name: Firewall-regels
+          href: concepts-firewall-rules.md
+        - name: SSL configureren
+          href: concepts-ssl-connection-security.md
+        - name: VNet
+          href: concepts-data-access-security-vnet.md
+    - name: Bedrijfscontinuïteit
+      items:
+        - name: Overzicht
+          href: concepts-business-continuity.md
+        - name: Back-ups en herstellen
+          href: concepts-backup.md
     - name: Controleren
-      href: concepts-monitoring.md
-    - name: Serverlogboeken
-      href: concepts-server-logs.md
-  - name: Ontwikkeling
-    items:
-    - name: Compatibiliteit van stuurprogramma's en hulpprogramma's
-      href: concepts-compatibility.md
-    - name: Verbindingstolerantie
-      href: concepts-connectivity.md
-  - name: Replicatie
-    items:
-    - name: Replicatie van binnenkomende gegevens
-      href: concepts-data-in-replication.md
+      items:
+        - name: Controleren
+          href: concepts-monitoring.md
+        - name: Serverlogboeken
+          href: concepts-server-logs.md
+    - name: Ontwikkeling
+      items:
+        - name: Compatibiliteit van stuurprogramma's en hulpprogramma's
+          href: concepts-compatibility.md
+        - name: Verbindingstolerantie
+          href: concepts-connectivity.md
+    - name: Replicatie
+      items:
+        - name: Replicatie van binnenkomende gegevens
+          href: concepts-data-in-replication.md
 - name: Handleidingen
   items:
-  - name: Firewall-regels
-    items:
-    - name: Azure Portal
-      href: howto-manage-firewall-portal.md
-    - name: Azure-CLI
-      href: howto-manage-firewall-cli.md
-  - name: Een server terugzetten
-    items:
-    - name: Azure Portal
-      href: howto-restore-server-portal.md
-    - name: Azure-CLI
-      href: howto-restore-server-cli.md
-  - name: Een database migreren
-    items:
-    - name: Dumpen en terugzetten
-      href: howto-migrate-dump-restore.md
-  - name: Toepassingen koppelen
-    items:
-    - name: Gebruikers maken
-      href: howto-create-users.md
-    - name: Verbindingsreeksen
-      href: howto-connection-string.md
-    - name: SSL configureren
-      href: howto-configure-ssl.md
-  - name: Parameters van de server configureren
-    items:
-    - name: Azure Portal
-      href: howto-server-parameters.md
-    - name: Azure-CLI
-      href: howto-configure-server-parameters-cli.md
-  - name: Serverlogboeken openen
-    items:
-    - name: Azure Portal
-      href: howto-configure-server-logs-portal.md
-    - name: Azure-CLI
-      href: howto-configure-server-logs-cli.md
-  - name: Controleren
-    items:
-    - name: Waarschuwingen maken op basis van metrische gegevens
-      href: howto-alert-metric.md
-  - name: Replicatie
-    items:
-    - name: Replicatie van binnenkomende gegevens configureren
-      href: howto-data-in-replication.md
-  - name: Problemen oplossen
-    items:
-    - name: Verbindingsfouten oplossen
-      href: howto-troubleshoot-common-connection-issues.md
-    - name: Prestatieproblemen van query's oplossen
-      href: howto-troubleshoot-query-performance.md
-  - name: Virtual Network
-    items:
-    - name: Azure Portal
-      href: howto-manage-vnet-portal.md
-    - name: Azure-CLI
-      href: howto-manage-vnet-cli.md
-  - name: Server opnieuw opstarten
-    items:
-    - name: Azure Portal
-      href: howto-restart-server-portal.md
-    - name: Azure-CLI
-      href: howto-restart-server-cli.md
+    - name: Firewall-regels
+      items:
+        - name: Azure Portal
+          href: howto-manage-firewall-portal.md
+        - name: Azure-CLI
+          href: howto-manage-firewall-cli.md
+    - name: Een server terugzetten
+      items:
+        - name: Azure Portal
+          href: howto-restore-server-portal.md
+        - name: Azure-CLI
+          href: howto-restore-server-cli.md
+    - name: Een database migreren
+      items:
+        - name: Dumpen en terugzetten
+          href: howto-migrate-dump-restore.md
+    - name: Toepassingen koppelen
+      items:
+        - name: Gebruikers maken
+          href: howto-create-users.md
+        - name: Verbindingsreeksen
+          href: howto-connection-string.md
+        - name: SSL configureren
+          href: howto-configure-ssl.md
+    - name: Parameters van de server configureren
+      items:
+        - name: Azure Portal
+          href: howto-server-parameters.md
+        - name: Azure-CLI
+          href: howto-configure-server-parameters-cli.md
+    - name: Serverlogboeken openen
+      items:
+        - name: Azure Portal
+          href: howto-configure-server-logs-portal.md
+        - name: Azure-CLI
+          href: howto-configure-server-logs-cli.md
+    - name: Controleren
+      items:
+        - name: Waarschuwingen maken op basis van metrische gegevens
+          href: howto-alert-metric.md
+    - name: Replicatie
+      items:
+        - name: Replicatie van binnenkomende gegevens configureren
+          href: howto-data-in-replication.md
+    - name: Problemen oplossen
+      items:
+        - name: Verbindingsfouten oplossen
+          href: howto-troubleshoot-common-connection-issues.md
+        - name: Prestatieproblemen van query's oplossen
+          href: howto-troubleshoot-query-performance.md
+    - name: Virtual Network
+      items:
+        - name: Azure Portal
+          href: howto-manage-vnet-portal.md
+        - name: Azure-CLI
+          href: howto-manage-vnet-cli.md
+    - name: Server opnieuw opstarten
+      items:
+        - name: Azure Portal
+          href: howto-restart-server-portal.md
+        - name: Azure-CLI
+          href: howto-restart-server-cli.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/mariadb
-  - name: REST-API
-    href: /rest/api/mariadb
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.dbformariadb/allversions
-  - name: Opgeslagen replicatieprocedures voor binnenkomende gegevens
-    href: reference-data-in-stored-procedures.md
+    - name: Azure-CLI
+      href: /cli/azure/mariadb
+    - name: REST-API
+      href: /rest/api/mariadb
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.dbformariadb/allversions
+    - name: Opgeslagen replicatieprocedures voor binnenkomende gegevens
+      href: reference-data-in-stored-procedures.md
 - name: Resources
   items:
-  - name: Implementatiesjablonen
-    href: https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbformariadb
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=databases
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/mariadb/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/forums/en-US/home?forum=AzureDatabaseforMariaDB
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-database-mariadb
-  - name: Verzoeken om een functie toe te voegen
-    href: https://feedback.azure.com/forums/915439-azure-database-for-mariadb
-  - name: Beschikbaarheid in regio’s
-    href: https://azure.microsoft.com/regions/services/
-  - name: Ondersteuningsopties
-    href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 1ad8ddc0cf189189b9457dabe6c2c2d665c838c3
-ms.sourcegitcommit: f8c592ebaad4a5fc45710dadc0e5c4480d122d6f
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58621122"
+    - name: Implementatiesjablonen
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbformariadb'
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=databases'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/mariadb/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/forums/en-US/home?forum=AzureDatabaseforMariaDB'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-database-mariadb'
+    - name: Verzoeken om een functie toe te voegen
+      href: 'https://feedback.azure.com/forums/915439-azure-database-for-mariadb'
+    - name: Beschikbaarheid in regio’s
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Ondersteuningsopties
+      href: 'https://azure.microsoft.com/support/options/'
