--- a/articles/network-watcher/index.yml
+++ b/articles/network-watcher/index.yml
@@ -6,14 +6,14 @@ metadata:
   title: 'Documentatie voor Network Watcher - zelfstudies, snelstarts, API-verwijzing | Microsoft Docs'
   meta.description: 'Learn how to use Azure Network Watcher. Quickstarts, tutorials, and more, show you how to gain insight into your Azure Virtual Network with tools like packet capture and NSG flows logs, to diagnose problems with traffic filtering and routing, and to monitor connections.'
   services: network-watcher
-  author: jdial
-  manager: jeconnoc
+  author: KumudD
+  manager: twolley
   ms.service: network-watcher
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 04/24/2018
-  ms.author: jdial
+  ms.author: kumud
 abstract:
   description: 'Leer hoe u Azure Network Watcher gebruikt. Via snelstarts, zelfstudies en meer krijgt u inzicht in uw virtuele Azure-netwerk met hulpprogramma''s als pakketvastlegging en logboeken van NSG-stromen, zodat u problemen met verkeersfilters en -routering kunt vaststellen en verbindingen kunt bewaken.'
 sections:
