--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -1,251 +1,244 @@
-items:
 - name: Documentatie voor Azure DB voor PostgreSQL
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Azure DB voor PostgreSQL?
-    href: overview.md
+    - name: Wat is Azure DB voor PostgreSQL?
+      href: overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Database maken - Portal
-    href: quickstart-create-server-database-portal.md
-  - name: Database maken - Azure CLI
-    href: quickstart-create-server-database-azure-cli.md
-  - name: Database maken - up-opdracht in Azure CLI
-    href: quickstart-create-server-up-azure-cli.md
-  - name: Verbinding maken en query uitvoeren
-    items:
-    - name: Python
-      href: connect-python.md
-    - name: Node.js
-      href: connect-nodejs.md
-    - name: Java
-      href: connect-java.md
-    - name: Ruby
-      href: connect-ruby.md
-    - name: PHP
-      href: connect-php.md
-    - name: .NET
-      href: connect-csharp.md
-    - name: Aan de slag
-      href: connect-go.md
   expanded: true
+  items:
+    - name: Database maken - Portal
+      href: quickstart-create-server-database-portal.md
+    - name: Database maken - Azure CLI
+      href: quickstart-create-server-database-azure-cli.md
+    - name: Database maken - up-opdracht in Azure CLI
+      href: quickstart-create-server-up-azure-cli.md
+    - name: Verbinding maken en query uitvoeren
+      items:
+        - name: Python
+          href: connect-python.md
+        - name: Node.js
+          href: connect-nodejs.md
+        - name: Java
+          href: connect-java.md
+        - name: Ruby
+          href: connect-ruby.md
+        - name: PHP
+          href: connect-php.md
+        - name: .NET
+          href: connect-csharp.md
+        - name: Aan de slag
+          href: connect-go.md
 - name: Zelfstudies
   items:
-  - name: 1 - Een database ontwerpen
-    items:
-    - name: Azure Portal
-      href: tutorial-design-database-using-azure-portal.md
-    - name: Azure-CLI
-      href: tutorial-design-database-using-azure-cli.md
-  - name: 2 - Een web-app ontwerpen - Python
-    href: ../app-service/containers/tutorial-python-postgresql-app.md
-    maintainContext: true
-  - name: 3 - Controleren en afstemmen
-    href: tutorial-monitor-and-tune.md
+    - name: 1 - Een database ontwerpen
+      items:
+        - name: Azure Portal
+          href: tutorial-design-database-using-azure-portal.md
+        - name: Azure-CLI
+          href: tutorial-design-database-using-azure-cli.md
+    - name: 2 - Een web-app ontwerpen - Python
+      href: ../app-service/containers/tutorial-python-postgresql-app.md
+      maintainContext: true
+    - name: 3 - Controleren en afstemmen
+      href: tutorial-monitor-and-tune.md
 - name: Voorbeelden
   items:
-  - name: Azure-CLI
-    href: sample-scripts-azure-cli.md
+    - name: Azure-CLI
+      href: sample-scripts-azure-cli.md
 - name: Concepten
   items:
-  - name: DB en servers
-    items:
-    - name: Servers
-      href: concepts-servers.md
-    - name: Ondersteunde versies
-      href: concepts-supported-versions.md
-    - name: PostgreSQL-extensies
-      href: concepts-extensions.md
-    - name: Hoge beschikbaarheid
-      href: concepts-high-availability.md
-  - name: Resources
-    items:
-    - name: Prijscategorieën
-      href: concepts-pricing-tiers.md
-    - name: Limieten
-      href: concepts-limits.md
-  - name: Gegevenstoegang en -beveiliging
-    items:
-    - name: Firewall-regels
-      href: concepts-firewall-rules.md
-    - name: SSL configureren
-      href: concepts-ssl-connection-security.md
-    - name: Advanced Threat Protection
-      href: concepts-data-access-and-security-threat-protection.md
-    - name: VNet
-      href: concepts-data-access-and-security-vnet.md
-  - name: Bedrijfscontinuïteit
-    items:
-    - name: Overzicht
-      href: concepts-business-continuity.md
-    - name: Back-ups en herstellen
-      href: concepts-backup.md
-  - name: Controleren en afstemmen
-    items:
+    - name: DB en servers
+      items:
+        - name: Servers
+          href: concepts-servers.md
+        - name: Ondersteunde versies
+          href: concepts-supported-versions.md
+        - name: PostgreSQL-extensies
+          href: concepts-extensions.md
+        - name: Hoge beschikbaarheid
+          href: concepts-high-availability.md
+    - name: Resources
+      items:
+        - name: Prijscategorieën
+          href: concepts-pricing-tiers.md
+        - name: Limieten
+          href: concepts-limits.md
+    - name: Gegevenstoegang en -beveiliging
+      items:
+        - name: Firewall-regels
+          href: concepts-firewall-rules.md
+        - name: SSL configureren
+          href: concepts-ssl-connection-security.md
+        - name: Advanced Threat Protection
+          href: concepts-data-access-and-security-threat-protection.md
+        - name: VNet
+          href: concepts-data-access-and-security-vnet.md
+    - name: Bedrijfscontinuïteit
+      items:
+        - name: Overzicht
+          href: concepts-business-continuity.md
+        - name: Back-ups en herstellen
+          href: concepts-backup.md
     - name: Controleren en afstemmen
-      href: concepts-monitoring.md
-    - name: Serverlogboeken
-      href: concepts-server-logs.md
-    - name: Query Store
       items:
-      - name: Query Store
-        href: concepts-query-store.md
-      - name: Query Store-gebruiksscenario's
-        href: concepts-query-store-scenarios.md
-      - name: Best practices voor Query Store
-        href: concepts-query-store-best-practices.md
-    - name: Inzicht in queryprestaties
-      href: concepts-query-performance-insight.md
-    - name: Aanbevelingen voor prestaties
-      href: concepts-performance-recommendations.md
-  - name: Ontwikkeling
-    items:
-    - name: Verbindingsbibliotheken
-      href: concepts-connection-libraries.md
-    - name: Verbindingstolerantie
-      href: concepts-connectivity.md
-    - name: Ontwikkelen met Azure Kubernetes Service (AKS)
-      href: concepts-aks.md
-    - name: Java
+        - name: Controleren en afstemmen
+          href: concepts-monitoring.md
+        - name: Serverlogboeken
+          href: concepts-server-logs.md
+        - name: Query Store
+          items:
+            - name: Query Store
+              href: concepts-query-store.md
+            - name: Query Store-gebruiksscenario's
+              href: concepts-query-store-scenarios.md
+            - name: Best practices voor Query Store
+              href: concepts-query-store-best-practices.md
+        - name: Inzicht in queryprestaties
+          href: concepts-query-performance-insight.md
+        - name: Aanbevelingen voor prestaties
+          href: concepts-performance-recommendations.md
+    - name: Ontwikkeling
       items:
-      - name: Spring Data JDBC configureren
-        href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-postgresql
-      - name: Spring Data JPA configureren
-        href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-postgresql
-  - name: Replicatie
-    items:
-    - name: Leesreplica's
-      href: concepts-read-replicas.md
+        - name: Verbindingsbibliotheken
+          href: concepts-connection-libraries.md
+        - name: Verbindingstolerantie
+          href: concepts-connectivity.md
+        - name: Ontwikkelen met Azure Kubernetes Service (AKS)
+          href: concepts-aks.md
+        - name: Java
+          items:
+            - name: Spring Data JDBC configureren
+              href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-postgresql
+            - name: Spring Data JPA configureren
+              href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-postgresql
+    - name: Replicatie
+      items:
+        - name: Leesreplica's
+          href: concepts-read-replicas.md
 - name: Handleidingen
   items:
-  - name: Gebruikers maken
-    href: howto-create-users.md
-  - name: Optimaliseren
-    items:
-    - name: Bulksgewijs invoegen
-      href: howto-optimize-bulk-inserts.md
-    - name: Autovacuum
-      href: howto-optimize-autovacuum.md
-    - name: Query op statistiekverzameling uitvoeren
-      href: howto-optimize-query-stats-collection.md
-    - name: Strategie voor toast-tabellen
-      href: howto-optimize-query-time-with-toast-table-storage-strategy.md
-  - name: Firewall beheren
-    items:
-    - name: Azure Portal
-      href: howto-manage-firewall-using-portal.md
-    - name: Azure-CLI
-      href: howto-manage-firewall-using-cli.md
-  - name: Een server terugzetten
-    items:
-    - name: Azure Portal
-      href: howto-restore-server-portal.md
-    - name: Azure-CLI
-      href: howto-restore-server-cli.md
-  - name: Een database migreren
-    items:
-    - name: Dumpen en terugzetten
-      href: howto-migrate-using-dump-and-restore.md
-    - name: Importeren en exporteren
-      href: howto-migrate-using-export-and-import.md
-    - name: Migratie met minimale downtime
-      href: howto-migrate-online.md
-  - name: Parameters van de server configureren
-    items:
-    - name: Azure Portal
-      href: howto-configure-server-parameters-using-portal.md
-    - name: Azure-CLI
-      href: howto-configure-server-parameters-using-cli.md
-  - name: Serverlogboeken openen
-    items:
-    - name: Azure Portal
-      href: howto-configure-server-logs-in-portal.md
-    - name: Azure-CLI
-      href: howto-configure-server-logs-using-cli.md
-  - name: Controleren
-    items:
-    - name: Waarschuwingen maken op basis van metrische gegevens
-      href: howto-alert-on-metric.md
-  - name: Problemen oplossen
-    items:
-    - name: Verbindingsfouten oplossen
-      href: howto-troubleshoot-common-connection-issues.md
-  - name: Advanced Threat Protection
-    items:
-    - name: Azure Portal
-      href: howto-database-threat-protection-portal.md
-  - name: Virtual Network
-    items:
-    - name: Azure Portal
-      href: howto-manage-vnet-using-portal.md
-    - name: Azure-CLI
-      href: howto-manage-vnet-using-cli.md
-  - name: Server opnieuw opstarten
-    items:
-    - name: Azure Portal
-      href: howto-restart-server-portal.md
-    - name: Azure-CLI
-      href: howto-restart-server-cli.md
-  - name: Replicatie
-    items:
-    - name: Leesreplica's beheren in de Azure-portal
-      href: howto-read-replicas-portal.md
-    - name: Leesreplica's beheren met de Azure CLI
-      href: howto-read-replicas-cli.md
+    - name: Gebruikers maken
+      href: howto-create-users.md
+    - name: Optimaliseren
+      items:
+        - name: Bulksgewijs invoegen
+          href: howto-optimize-bulk-inserts.md
+        - name: Autovacuum
+          href: howto-optimize-autovacuum.md
+        - name: Query op statistiekverzameling uitvoeren
+          href: howto-optimize-query-stats-collection.md
+        - name: Strategie voor toast-tabellen
+          href: howto-optimize-query-time-with-toast-table-storage-strategy.md
+    - name: Firewall beheren
+      items:
+        - name: Azure Portal
+          href: howto-manage-firewall-using-portal.md
+        - name: Azure-CLI
+          href: howto-manage-firewall-using-cli.md
+    - name: Een server terugzetten
+      items:
+        - name: Azure Portal
+          href: howto-restore-server-portal.md
+        - name: Azure-CLI
+          href: howto-restore-server-cli.md
+    - name: Een database migreren
+      items:
+        - name: Dumpen en terugzetten
+          href: howto-migrate-using-dump-and-restore.md
+        - name: Importeren en exporteren
+          href: howto-migrate-using-export-and-import.md
+        - name: Migratie met minimale downtime
+          href: howto-migrate-online.md
+    - name: Parameters van de server configureren
+      items:
+        - name: Azure Portal
+          href: howto-configure-server-parameters-using-portal.md
+        - name: Azure-CLI
+          href: howto-configure-server-parameters-using-cli.md
+    - name: Serverlogboeken openen
+      items:
+        - name: Azure Portal
+          href: howto-configure-server-logs-in-portal.md
+        - name: Azure-CLI
+          href: howto-configure-server-logs-using-cli.md
+    - name: Controleren
+      items:
+        - name: Waarschuwingen maken op basis van metrische gegevens
+          href: howto-alert-on-metric.md
+    - name: Problemen oplossen
+      items:
+        - name: Verbindingsfouten oplossen
+          href: howto-troubleshoot-common-connection-issues.md
+    - name: Advanced Threat Protection
+      items:
+        - name: Azure Portal
+          href: howto-database-threat-protection-portal.md
+    - name: Virtual Network
+      items:
+        - name: Azure Portal
+          href: howto-manage-vnet-using-portal.md
+        - name: Azure-CLI
+          href: howto-manage-vnet-using-cli.md
+    - name: Server opnieuw opstarten
+      items:
+        - name: Azure Portal
+          href: howto-restart-server-portal.md
+        - name: Azure-CLI
+          href: howto-restart-server-cli.md
+    - name: Replicatie
+      items:
+        - name: Leesreplica's beheren in de Azure-portal
+          href: howto-read-replicas-portal.md
+        - name: Leesreplica's beheren met de Azure CLI
+          href: howto-read-replicas-cli.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/postgres
-  - name: REST-API
-    href: /rest/api/postgresql
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.dbforpostgresql/allversions
+    - name: Azure-CLI
+      href: /cli/azure/postgres
+    - name: REST-API
+      href: /rest/api/postgresql
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.dbforpostgresql/allversions
 - name: Resources
   items:
-  - name: Uw vaardigheden ontwikkelen met Microsoft Learn
-    href: /learn/browse/
-  - name: Implementatiesjablonen
-    href: https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbforpostgresql
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=databases
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/postgresql/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-database-postgresql
-  - name: Video's
-    items:
-    - name: Productvideo's
-      href: videos.md
-    - name: Instructievideo's
+    - name: Uw vaardigheden ontwikkelen met Microsoft Learn
+      href: /learn/browse/
+    - name: Implementatiesjablonen
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbforpostgresql'
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=databases'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/postgresql/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-database-postgresql'
+    - name: Video's
       items:
-      - name: Informatie over de functies en voordelen
-        href: https://aka.ms/postg-intro-vid
-      - name: Uw PostgreSQL-app naar Azure migreren
-        href: https://aka.ms/postg-migrate-vid
-      - name: Intelligente apps met Cognitive Services bouwen
-        href: https://aka.ms/postg-cogsvs-vid
-      - name: Containers verbinden met behulp van OSBA
-        href: https://aka.ms/postg-osba-vid
-      - name: De gegevens van uw app verbinden met Power BI
-        href: https://aka.ms/postg-powerbi-vid
-  - name: Feedbackforum
-    href: https://feedback.azure.com/forums/597976-azure-database-for-postgresql
-  - name: Beschikbaarheid in regio’s
-    href: https://azure.microsoft.com/regions/services/
-  - name: Ondersteuningsopties
-    href: https://azure.microsoft.com/support/options/
-  - name: Verhalen van klanten
-    href: https://customers.microsoft.com/en-us/search?sq="Azure%20Database%20for%20PostgreSQL"
-  - name: Partners
-    href: partners-migration-postgresql.md
-  - name: Handleiding voor databasemigratie
-    href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 5958953a879a84a3a0b78b91ca276ad4bf48fc00
-ms.sourcegitcommit: 956749f17569a55bcafba95aef9abcbb345eb929
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58629196"
+        - name: Productvideo's
+          href: videos.md
+        - name: Instructievideo's
+          items:
+            - name: Informatie over de functies en voordelen
+              href: 'https://aka.ms/postg-intro-vid'
+            - name: Uw PostgreSQL-app naar Azure migreren
+              href: 'https://aka.ms/postg-migrate-vid'
+            - name: Intelligente apps met Cognitive Services bouwen
+              href: 'https://aka.ms/postg-cogsvs-vid'
+            - name: Containers verbinden met behulp van OSBA
+              href: 'https://aka.ms/postg-osba-vid'
+            - name: De gegevens van uw app verbinden met Power BI
+              href: 'https://aka.ms/postg-powerbi-vid'
+    - name: Feedbackforum
+      href: 'https://feedback.azure.com/forums/597976-azure-database-for-postgresql'
+    - name: Beschikbaarheid in regio’s
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Ondersteuningsopties
+      href: 'https://azure.microsoft.com/support/options/'
+    - name: Verhalen van klanten
+      href: 'https://customers.microsoft.com/en-us/search?sq="Azure%20Database%20for%20PostgreSQL"'
+    - name: Partners
+      href: partners-migration-postgresql.md
+    - name: Handleiding voor databasemigratie
+      href: 'https://datamigration.microsoft.com/'
