--- a/articles/sentinel/index.yml
+++ b/articles/sentinel/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5f1d6005dd94bc700682e749f08c47356fcdc829
-ms.sourcegitcommit: f7f4b83996640d6fa35aea889dbf9073ba4422f0
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/28/2019
-ms.locfileid: "56993330"
 documentType: LandingData
 title: Preview-documentatie voor Azure Sentinel
 metadata:
-  title: Preview-documentatie voor Azure Sentinel - zelfstudies, quickstarts | Microsoft Docs
+  title: 'Preview-documentatie voor Azure Sentinel - zelfstudies, quickstarts | Microsoft Docs'
   meta.description: Azure Sentinel is a cloud-native SIEM that provides intelligent security analytics for your entire enterprise at cloud scale.
   services: sentinel
   author: cmcclister
@@ -20,49 +14,49 @@ metadata:
   ms.date: 02/28/19
   ms.author: cmcclister
 abstract:
-  description: Azure Sentinel Preview is een cloud-eigen SIEM met intelligente beveiligingsanalyses voor uw hele onderneming in de cloud. Ontvang onbeperkte cloudsnelheid en pas de schaal aan om in te zoomen op wat echt belangrijk is. Verzamel eenvoudig gegevens van al uw cloudassets of on-premises assets, Office 365, Azure-resources en andere clouds. Detecteer effectief bedreigingen met ingebouwde machine learning van beveiligingsanalyse-experts van Microsoft. Automatiseer de reactie op bedreigingen met behulp van ingebouwde indeling en automatiseringsplaybooks.
+  description: 'Azure Sentinel Preview is een cloud-eigen SIEM met intelligente beveiligingsanalyses voor uw hele onderneming in de cloud. Ontvang onbeperkte cloudsnelheid en pas de schaal aan om in te zoomen op wat echt belangrijk is. Verzamel eenvoudig gegevens van al uw cloudassets of on-premises assets, Office 365, Azure-resources en andere clouds. Detecteer effectief bedreigingen met ingebouwde machine learning van beveiligingsanalyse-experts van Microsoft. Automatiseer de reactie op bedreigingen met behulp van ingebouwde indeling en automatiseringsplaybooks.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u uw gegevens voorbereidt op Azure Sentinel en krijg inzicht in uw gegevens en mogelijke bedreigingen.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: media/index/deploy.svg
-      text: Azure Sentinel voorbereiden
-      href: /azure/sentinel/quickstart-onboard
-    - image:
-        src: media/index/get-started.svg
-      text: Aan de slag met Azure Sentinel
-      href: /azure/sentinel/quickstart-get-visibility
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Meer informatie over hoe u beveiligingsbeleid opstelt, uw resources beveiligt tegen schadelijke activiteit en adequaat reageert op beveiligingswaarschuwingen en incidenten.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Leer hoe u uw gegevens voorbereidt op Azure Sentinel en krijg inzicht in uw gegevens en mogelijke bedreigingen.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/index/deploy.svg
+            text: Azure Sentinel voorbereiden
+            href: /azure/sentinel/quickstart-onboard
+          - image:
+              src: media/index/get-started.svg
+            text: Aan de slag met Azure Sentinel
+            href: /azure/sentinel/quickstart-get-visibility
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/sentinel/tutorial-detect-threats">Bedreigingen detecteren met Azure Sentinel</a>
-    - html: <a href="/azure/sentinel/tutorial-respond-threats-playbook">Geautomatiseerde bedreigingsreacties instellen</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Meer informatie over hoe u beveiligingsbeleid opstelt, uw resources beveiligt tegen schadelijke activiteit en adequaat reageert op beveiligingswaarschuwingen en incidenten.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/sentinel/tutorial-detect-threats">Bedreigingen detecteren met Azure Sentinel</a>
+          - html: <a href="/azure/sentinel/tutorial-respond-threats-playbook">Geautomatiseerde bedreigingsreacties instellen</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - title: Inleiding tot beveiliging in Azure
-      href: https://docs.microsoft.com/learn/azure
-      image:
-        src: media/index/tutorial.svg
-        href: https://docs.microsoft.com/learn/azure
-  - type: paragraph
-    text: <a href="/learn/browse/?term=security">Meer interactief leren...</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Inleiding tot beveiliging in Azure
+            href: 'https://docs.microsoft.com/learn/azure'
+            image:
+              src: media/index/tutorial.svg
+              href: 'https://docs.microsoft.com/learn/azure'
+      - type: paragraph
+        text: <a href="/learn/browse/?term=security">Meer interactief leren...</a>
+  - title: Naslaginformatie
     items:
-    - html: <a href="https://azure.microsoft.com/updates/?product=sentinel">Service-updates</a>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - html: '<a href="https://azure.microsoft.com/updates/?product=sentinel">Service-updates</a>'
