--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: eaceb3170e3b3f7bd155f42521102365401f0421
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58337440"
 documentType: LandingData
 title: Documentatie voor Azure Service Fabric Mesh
 metadata:
-  title: Documentatie voor Azure Service Fabric Mesh - zelfstudies, API-verwijzing | Microsoft Docs
-  meta.description: Azure Service Fabric Mesh is a fully managed service enabling developers to deploy containerized applications without managing virtual machines, storage, or networking resources. Learn how to use Service Fabric Mesh with our quickstarts and tutorials.
+  title: 'Documentatie voor Azure Service Fabric Mesh - zelfstudies, API-verwijzing | Microsoft Docs'
+  meta.description: 'Azure Service Fabric Mesh is a fully managed service enabling developers to deploy containerized applications without managing virtual machines, storage, or networking resources. Learn how to use Service Fabric Mesh with our quickstarts and tutorials.'
   services: service-fabric-mesh
   author: dkkapur
   manager: timlt
@@ -20,37 +14,37 @@ metadata:
   ms.date: 07/26/2018
   ms.author: dekapur
 abstract:
-  description: Azure Service Fabric Mesh is een volledig beheerde service waarmee ontwikkelaars essentiële toepassingen kunnen maken en implementeren zonder enige infrastructuur te beheren.  Gebruik Service Fabric Mesh om veilige, gedistribueerde microservices-toepassingen, die op aanvraag worden geschaald, te bouwen en uit te voeren. Leer aan de hand van onze snelstarts en zelfstudies hoe u Service Fabric Mesh gebruikt.  Lees voor meer informatie het <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">overzicht van Service Fabric Mesh</a> en de <a href="/azure/service-fabric-mesh/service-fabric-mesh-faq">veelgestelde vragen</a>.
+  description: 'Azure Service Fabric Mesh is een volledig beheerde service waarmee ontwikkelaars essentiële toepassingen kunnen maken en implementeren zonder enige infrastructuur te beheren.  Gebruik Service Fabric Mesh om veilige, gedistribueerde microservices-toepassingen, die op aanvraag worden geschaald, te bouwen en uit te voeren. Leer aan de hand van onze snelstarts en zelfstudies hoe u Service Fabric Mesh gebruikt.  Lees voor meer informatie het <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">overzicht van Service Fabric Mesh</a> en de <a href="/azure/service-fabric-mesh/service-fabric-mesh-faq">veelgestelde vragen</a>.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u Service Fabric-toepassingen en -containers implementeert in Service Fabric Mesh
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
-      text: Hallo wereld implementeren in Service Fabric Mesh
-      href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-deploy-container
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_netcore.svg
-      text: Een web-app maken en implementeren in Service Fabric Mesh
-      href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-dotnet-core
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Uitleg over het bouwen en implementeren van een Mesh-app met Visual Studio of de Azure-CLI.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Leer hoe u Service Fabric-toepassingen en -containers implementeert in Service Fabric Mesh
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Hallo wereld implementeren in Service Fabric Mesh
+            href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-deploy-container
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_netcore.svg'
+            text: Een web-app maken en implementeren in Service Fabric Mesh
+            href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-dotnet-core
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Een app met meerdere services bouwen, foutvrij maken, implementeren en upgraden in Service Fabric Mesh met behulp van Visual Studio.</a>
-    - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-template-deploy-app">Een Service Fabric Mesh-app implementeren, schalen en upgraden met behulp van een sjabloon.</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Uitleg over het bouwen en implementeren van een Mesh-app met Visual Studio of de Azure-CLI.
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Een app met meerdere services bouwen, foutvrij maken, implementeren en upgraden in Service Fabric Mesh met behulp van Visual Studio.</a>'
+          - html: '<a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-template-deploy-app">Een Service Fabric Mesh-app implementeren, schalen en upgraden met behulp van een sjabloon.</a>'
+  - title: Naslaginformatie
     items:
-    - title: REST
-      html: <p><a href="/rest/api/servicefabric/sfmeshrp-index">Resourceprovider-API's voor Service Fabric Mesh</a></p><p><a href="/rest/api/servicefabric/sfclient-index#service-fabric-resource-model">Resource-API's voor Service Fabric-client</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST
+            html: '<p><a href="/rest/api/servicefabric/sfmeshrp-index">Resourceprovider-API''s voor Service Fabric Mesh</a></p><p><a href="/rest/api/servicefabric/sfclient-index#service-fabric-resource-model">Resource-API''s voor Service Fabric-client</a></p>'
