--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -1,148 +1,141 @@
-items:
 - name: Documentatie over Traffic Manager
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Traffic Manager?
-    href: traffic-manager-overview.md
+    - name: Wat is Traffic Manager?
+      href: traffic-manager-overview.md
 - name: Snelstartgids
   items:
-  - name: Traffic Manager-profiel maken - portal
-    href: quickstart-create-traffic-manager-profile.md
-  - name: Traffic Manager-profiel maken - PowerShell
-    href: quickstart-create-traffic-manager-profile-powershell.md
+    - name: Traffic Manager-profiel maken - portal
+      href: quickstart-create-traffic-manager-profile.md
+    - name: Traffic Manager-profiel maken - PowerShell
+      href: quickstart-create-traffic-manager-profile-powershell.md
 - name: Zelfstudies
   items:
-  - name: Verkeer routeren voor lage latentie
-    href: tutorial-traffic-manager-improve-website-response.md
-  - name: Verkeer routeren op basis van de geografische locatie van het eindpunt
-    href: traffic-manager-configure-geographic-routing-method.md
-  - name: Verkeer naar een set eindpunten distribueren
-    href: traffic-manager-configure-weighted-routing-method.md
-  - name: Verkeer routeren naar een prioriteitseindpunt
-    href: traffic-manager-configure-priority-routing-method.md
-  - name: Verkeer beheren met gewogen eindpunten
-    href: tutorial-traffic-manager-weighted-endpoint-routing.md
-  - name: Verkeer routeren op basis van het subnet van de gebruiker
-    href: tutorial-traffic-manager-subnet-routing.md
-  - name: Aliasrecords voor Traffic Manager
-    href: ../dns/tutorial-alias-tm.md?toc=%2fazure%2ftraffic-manager%2ftoc.json
+    - name: Verkeer routeren voor lage latentie
+      href: tutorial-traffic-manager-improve-website-response.md
+    - name: Verkeer routeren op basis van de geografische locatie van het eindpunt
+      href: traffic-manager-configure-geographic-routing-method.md
+    - name: Verkeer naar een set eindpunten distribueren
+      href: traffic-manager-configure-weighted-routing-method.md
+    - name: Verkeer routeren naar een prioriteitseindpunt
+      href: traffic-manager-configure-priority-routing-method.md
+    - name: Verkeer beheren met gewogen eindpunten
+      href: tutorial-traffic-manager-weighted-endpoint-routing.md
+    - name: Verkeer routeren op basis van het subnet van de gebruiker
+      href: tutorial-traffic-manager-subnet-routing.md
+    - name: Aliasrecords voor Traffic Manager
+      href: ../dns/tutorial-alias-tm.md?toc=%2fazure%2ftraffic-manager%2ftoc.json
 - name: Voorbeelden
   items:
-  - name: Azure CLI
-    href: cli-samples.md
-  - name: Azure PowerShell
-    href: powershell-samples.md
+    - name: Azure CLI
+      href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
 - name: Concepten
   items:
-  - name: Routeringsmethoden
-    href: traffic-manager-routing-methods.md
-    items:
-    - name: Land-/regiohiërarchie die door Traffic Manager wordt gebruikt
-      href: traffic-manager-geographic-regions.md
-  - name: Geneste Traffic Manager-profielen
-    href: traffic-manager-nested-profiles.md
-  - name: Typen eindpunten
-    href: traffic-manager-endpoint-types.md
-  - name: Eindpuntbewaking
-    href: traffic-manager-monitoring.md
-  - name: Real-user-metingen
-    href: traffic-manager-rum-overview.md
-  - name: Verkeersweergave
-    href: traffic-manager-traffic-view-overview.md
-  - name: Statistieken en waarschuwingen
-    href: traffic-manager-metrics-alerts.md
-  - name: Herstel na noodgevallen met Azure DNS en Traffic Manager
-    href: ../networking/disaster-recovery-dns-traffic-manager.md
-  - name: Hoe Traffic Manager werkt
-    href: traffic-manager-how-it-works.md
-  - name: Veelgestelde vragen
-    href: traffic-manager-FAQs.md
+    - name: Routeringsmethoden
+      href: traffic-manager-routing-methods.md
+      items:
+        - name: Land-/regiohiërarchie die door Traffic Manager wordt gebruikt
+          href: traffic-manager-geographic-regions.md
+    - name: Geneste Traffic Manager-profielen
+      href: traffic-manager-nested-profiles.md
+    - name: Typen eindpunten
+      href: traffic-manager-endpoint-types.md
+    - name: Eindpuntbewaking
+      href: traffic-manager-monitoring.md
+    - name: Real-user-metingen
+      href: traffic-manager-rum-overview.md
+    - name: Verkeersweergave
+      href: traffic-manager-traffic-view-overview.md
+    - name: Statistieken en waarschuwingen
+      href: traffic-manager-metrics-alerts.md
+    - name: Herstel na noodgevallen met Azure DNS en Traffic Manager
+      href: ../networking/disaster-recovery-dns-traffic-manager.md
+    - name: Hoe Traffic Manager werkt
+      href: traffic-manager-how-it-works.md
+    - name: Veelgestelde vragen
+      href: traffic-manager-FAQs.md
 - name: Procedures
   items:
-  - name: Prestatieroutering configureren in Traffic Manager
-    href: traffic-manager-configure-performance-routing-method.md
-  - name: Routering met meerdere waarden configureren in Traffic Manager
-    href: traffic-manager-configure-multivalue-routing-method.md
-  - name: Subnetroutering configureren in Traffic Manager
-    href: traffic-manager-configure-subnet-routing-method.md
-  - name: Echte gebruikersmetingen verzenden naar Traffic Manager
-    items:
-    - name: Visual Studio SDK gebruiken
-      href: traffic-manager-create-rum-visual-studio.md
-    - name: Webpagina’s gebruiken
-      href: traffic-manager-create-rum-web-pages.md
-  - name: Eindpunten beheren
-    href: traffic-manager-manage-endpoints.md
-  - name: Profielen beheren
-    href: traffic-manager-manage-profiles.md
-  - name: Traffic Manager-instellingen controleren
-    href: traffic-manager-testing-settings.md
-  - name: Taakverdelingsservices combineren
-    href: traffic-manager-load-balancing-azure.md
-  - name: Prestaties van Traffic Manager meten
-    href: traffic-manager-performance-considerations.md
-  - name: Diagnostische logboeken inschakelen
-    href: traffic-manager-diagnostic-logs.md
-  - name: Azure PowerShell gebruiken om Traffic Manager te beheren
-    href: traffic-manager-powershell-arm.md
-  - name: Uw internetdomein instellen op Traffic Manager
-    href: traffic-manager-point-internet-domain.md
-  - name: Problemen oplossen
-    items:
-    - name: Problemen oplossen met degraded status op Azure Traffic Manager
-      href: traffic-manager-troubleshooting-degraded.md
+    - name: Prestatieroutering configureren in Traffic Manager
+      href: traffic-manager-configure-performance-routing-method.md
+    - name: Routering met meerdere waarden configureren in Traffic Manager
+      href: traffic-manager-configure-multivalue-routing-method.md
+    - name: Subnetroutering configureren in Traffic Manager
+      href: traffic-manager-configure-subnet-routing-method.md
+    - name: Echte gebruikersmetingen verzenden naar Traffic Manager
+      items:
+        - name: Visual Studio SDK gebruiken
+          href: traffic-manager-create-rum-visual-studio.md
+        - name: Webpagina’s gebruiken
+          href: traffic-manager-create-rum-web-pages.md
+    - name: Eindpunten beheren
+      href: traffic-manager-manage-endpoints.md
+    - name: Profielen beheren
+      href: traffic-manager-manage-profiles.md
+    - name: Traffic Manager-instellingen controleren
+      href: traffic-manager-testing-settings.md
+    - name: Taakverdelingsservices combineren
+      href: traffic-manager-load-balancing-azure.md
+    - name: Prestaties van Traffic Manager meten
+      href: traffic-manager-performance-considerations.md
+    - name: Diagnostische logboeken inschakelen
+      href: traffic-manager-diagnostic-logs.md
+    - name: Azure PowerShell gebruiken om Traffic Manager te beheren
+      href: traffic-manager-powershell-arm.md
+    - name: Uw internetdomein instellen op Traffic Manager
+      href: traffic-manager-point-internet-domain.md
+    - name: Problemen oplossen
+      items:
+        - name: Problemen oplossen met degraded status op Azure Traffic Manager
+          href: traffic-manager-troubleshooting-degraded.md
 - name: Naslaginformatie
   items:
-  - name: Codevoorbeelden
-    href: https://azure.microsoft.com/resources/samples/?service=traffic-manager
-  - name: Azure PowerShell
-    href: /powershell/module/az.trafficmanager
-  - name: Azure-CLI
-    href: /cli/azure/network/traffic-manager
-  - name: Java
-    href: /java/api/com.microsoft.azure.management.trafficmanager
-  - name: Node.js
-    href: https://azure.github.io/azure-sdk-for-node/azure-arm-trafficmanager/latest/
-  - name: Ruby
-    href: http://www.rubydoc.info/gems/azure_mgmt_traffic_manager
-  - name: Python
-    href: http://azure-sdk-for-python.readthedocs.io/en/latest/sample_azure-mgmt-trafficmanager.html
-  - name: REST
-    href: https://msdn.microsoft.com/library/mt163667.aspx
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.network/trafficmanagerprofiles
+    - name: Codevoorbeelden
+      href: 'https://azure.microsoft.com/resources/samples/?service=traffic-manager'
+    - name: Azure PowerShell
+      href: /powershell/module/az.trafficmanager
+    - name: Azure-CLI
+      href: /cli/azure/network/traffic-manager
+    - name: Java
+      href: /java/api/com.microsoft.azure.management.trafficmanager
+    - name: Node.js
+      href: 'https://azure.github.io/azure-sdk-for-node/azure-arm-trafficmanager/latest/'
+    - name: Ruby
+      href: 'http://www.rubydoc.info/gems/azure_mgmt_traffic_manager'
+    - name: Python
+      href: 'http://azure-sdk-for-python.readthedocs.io/en/latest/sample_azure-mgmt-trafficmanager.html'
+    - name: REST
+      href: 'https://msdn.microsoft.com/library/mt163667.aspx'
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.network/trafficmanagerprofiles
 - name: Verwant
   items:
-  - name: Application Gateway
-    href: /azure/application-gateway/
-  - name: Load Balancer
-    href: /azure/load-balancer/
-  - name: Azure DNS
-    href: /azure/dns/
+    - name: Application Gateway
+      href: /azure/application-gateway/
+    - name: Load Balancer
+      href: /azure/load-balancer/
+    - name: Azure DNS
+      href: /azure/dns/
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Blog
-    href: https://azure.microsoft.com/blog/topics/networking/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/traffic-manager/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Servicelimieten
-    href: ../azure-subscription-service-limits.md#traffic-manager-limits
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=traffic-manager
-  - name: SLA
-    href: https://azure.microsoft.com/support/legal/sla/traffic-manager/
-  - name: Video's
-    href: https://azure.microsoft.com/resources/videos/index/?services=traffic-manager
-ms.openlocfilehash: cca0930c6314f15dfd33a32bd6f5cb5ad6da0134
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59785705"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Blog
+      href: 'https://azure.microsoft.com/blog/topics/networking/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/traffic-manager/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Servicelimieten
+      href: '../azure-subscription-service-limits.md#traffic-manager-limits'
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=traffic-manager'
+    - name: SLA
+      href: 'https://azure.microsoft.com/support/legal/sla/traffic-manager/'
+    - name: Video's
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=traffic-manager'
