--- a/articles/virtual-desktop/index.yml
+++ b/articles/virtual-desktop/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b9f4cd78288d1b9868a823c5e0ccd0b68b324229
-ms.sourcegitcommit: 81fa781f907405c215073c4e0441f9952fe80fe5
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/25/2019
-ms.locfileid: "58400249"
 documentType: LandingData
 title: Documentatie over Windows Virtual Desktop Preview
 metadata:
-  title: Documentatie over Windows Virtual Desktop Preview - zelfstudies, quickstarts, API-verwijzingen | Microsoft Docs
+  title: 'Documentatie over Windows Virtual Desktop Preview - zelfstudies, quickstarts, API-verwijzingen | Microsoft Docs'
   description: Windows Virtual Desktop Preview voor Azure is een Windows 10 Enterprise-ervaring voor meerdere gebruikers in de cloud.
   author: Heidilohr
   manager: daveba
@@ -18,30 +12,30 @@ metadata:
   ms.date: 02/20/2019
   ms.author: helohr
 abstract:
-  description: Lever een virtuele desktopervaring en externe apps aan elk apparaat. Combineer Microsoft 365 en Azure om gebruikers de enige Windows 10-ervaring met meerdere sessies te bieden, op buitengewone schaal en met lagere IT-kosten.
+  description: 'Lever een virtuele desktopervaring en externe apps aan elk apparaat. Combineer Microsoft 365 en Azure om gebruikers de enige Windows 10-ervaring met meerdere sessies te bieden, op buitengewone schaal en met lagere IT-kosten.'
 sections:
-- title: Overzicht
-  items:
-  - type: paragraph
-    text: Meer informatie over Windows Virtual Desktop Preview en het gebruik ervan. Via zelfstudies, instructies, verwijzingen en meer leert u hoe u hostpools en tenants instelt en rollen toewijst aan gebruikers voor uw Windows Virtual Desktop-omgeving.
-  - type: list
-    style: unordered
+  - title: Overzicht
     items:
-    - html: <a href="/azure/virtual-desktop/overview">Wat is Windows Virtual Desktop Preview?</a>
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Informatie over de installatie en configuratie van Windows Virtual Desktop en hoe u verbinding maakt met de client wanneer u klaar bent.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Meer informatie over Windows Virtual Desktop Preview en het gebruik ervan. Via zelfstudies, instructies, verwijzingen en meer leert u hoe u hostpools en tenants instelt en rollen toewijst aan gebruikers voor uw Windows Virtual Desktop-omgeving.'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/virtual-desktop/overview">Wat is Windows Virtual Desktop Preview?</a>
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/virtual-desktop/tenant-setup-azure-active-directory">Een tenant maken in Windows Virtual Desktop</a>
-    - html: <a href="/azure/virtual-desktop/create-host-pools-azure-marketplace">Een hostpool maken met Azure Marketplace</a>
-    - html: <a href="/azure/virtual-desktop/manage-app-groups">Appgroepen beheren voor Windows Virtual Desktop</a>
-    - html: <a href="/azure/virtual-desktop/create-service-principal-role-powershell">Service-principals en roltoewijzingen maken met PowerShell</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Informatie over de installatie en configuratie van Windows Virtual Desktop en hoe u verbinding maakt met de client wanneer u klaar bent.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/virtual-desktop/tenant-setup-azure-active-directory">Een tenant maken in Windows Virtual Desktop</a>
+          - html: <a href="/azure/virtual-desktop/create-host-pools-azure-marketplace">Een hostpool maken met Azure Marketplace</a>
+          - html: <a href="/azure/virtual-desktop/manage-app-groups">Appgroepen beheren voor Windows Virtual Desktop</a>
+          - html: <a href="/azure/virtual-desktop/create-service-principal-role-powershell">Service-principals en roltoewijzingen maken met PowerShell</a>
+  - title: Naslaginformatie
     items:
-    - html: <a href="/powershell/windows-virtual-desktop/overview">PowerShell</a>
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/powershell/windows-virtual-desktop/overview">PowerShell</a>
