--- a/articles/virtual-machine-scale-sets/index.yml
+++ b/articles/virtual-machine-scale-sets/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: abf4aa9210b0d497b1f93361e05e2188d1ef3f6a
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46976604"
 documentType: LandingData
 title: Documentatie over virtuele-machineschaalsets
 metadata:
-  title: Met schaalsets van virtuele Azure-machines kunt u een groep identieke, automatisch schalende VM's met gelijke taakverdeling maken en beheren. Ontdek met onze snelstarts, zelfstudies en voorbeelden hoe u virtuele-machinesschaalsets maakt, configureert, beheert en automatisch schaalt.
+  title: 'Met schaalsets van virtuele Azure-machines kunt u een groep identieke, automatisch schalende VM''s met gelijke taakverdeling maken en beheren. Ontdek met onze snelstarts, zelfstudies en voorbeelden hoe u virtuele-machinesschaalsets maakt, configureert, beheert en automatisch schaalt.'
   services: virtual-machine-scale-sets
   author: carolz
   manager: czeumault
@@ -19,46 +13,46 @@ metadata:
   ms.date: 03/14/2018
   ms.author: carolz
 abstract:
-  description: Met schaalsets van virtuele Azure-machines kunt u een groep identieke, automatisch schalende VM's met gelijke taakverdeling maken en beheren. Ontdek met onze snelstarts, zelfstudies en voorbeelden hoe u virtuele-machinesschaalsets maakt, configureert, beheert en automatisch schaalt.
+  description: 'Met schaalsets van virtuele Azure-machines kunt u een groep identieke, automatisch schalende VM''s met gelijke taakverdeling maken en beheren. Ontdek met onze snelstarts, zelfstudies en voorbeelden hoe u virtuele-machinesschaalsets maakt, configureert, beheert en automatisch schaalt.'
 sections:
-- title: Snelstartgidsen
-  items:
-  - type: paragraph
-    text: Ontdek hoe u een webserver in een virtuele-machineschaalset implementeert.
-  - type: list
-    style: icon48
+  - title: Snelstartgidsen
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure-portal
-      href: /azure/virtual-machine-scale-sets/quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg
-      text: Azure-CLI
-      href: /azure/virtual-machine-scale-sets/quick-create-cli
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/virtual-machine-scale-sets/quick-create-powershell
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Ontdek hoe u virtuele-machineschaalsets in Azure implementeert, beheert en automatisch schaalt.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Ontdek hoe u een webserver in een virtuele-machineschaalset implementeert.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg'
+            text: Azure-portal
+            href: /azure/virtual-machine-scale-sets/quick-create-portal
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg'
+            text: Azure-CLI
+            href: /azure/virtual-machine-scale-sets/quick-create-cli
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: /azure/virtual-machine-scale-sets/quick-create-powershell
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: Een schaalset maken en beheren met de <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-powershell">Azure PowerShell</a>
-    - html: Gegevensschijven gebruiken met de <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-powershell">Azure PowerShell</a>
-    - html: Een aangepaste VM-installatiekopie gebruiken met de <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-powershell">Azure PowerShell</a>
-    - html: Apps implementeren in een schaalset met de <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-powershell">Azure PowerShell</a>
-    - html: Een schaalset automatisch schalen met de <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-powershell">Azure PowerShell</a>
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Voorbeeldimplementaties van virtuele-machineschaalsets.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Ontdek hoe u virtuele-machineschaalsets in Azure implementeert, beheert en automatisch schaalt.'
+      - type: list
+        style: ordered
+        items:
+          - html: Een schaalset maken en beheren met de <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-powershell">Azure PowerShell</a>
+          - html: Gegevensschijven gebruiken met de <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-powershell">Azure PowerShell</a>
+          - html: Een aangepaste VM-installatiekopie gebruiken met de <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-powershell">Azure PowerShell</a>
+          - html: Apps implementeren in een schaalset met de <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-powershell">Azure PowerShell</a>
+          - html: Een schaalset automatisch schalen met de <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-cli">Azure CLI</a> of <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-powershell">Azure PowerShell</a>
+  - title: Voorbeelden
     items:
-    - html: <a href="/azure/virtual-machine-scale-sets/cli-samples">Azure-CLI</a>
-    - html: <a href="/azure/virtual-machine-scale-sets/powershell-samples">Azure PowerShell</a>
+      - type: paragraph
+        text: Voorbeeldimplementaties van virtuele-machineschaalsets.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/virtual-machine-scale-sets/cli-samples">Azure-CLI</a>
+          - html: <a href="/azure/virtual-machine-scale-sets/powershell-samples">Azure PowerShell</a>
